--- a/node35.html
+++ b/node35.html
@@ -100,8 +100,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 
 <H1><A NAME="SECTION04470000000000000000">
 Eliminando la Recursividad por la Izquierda en la Calculadora</A>
-</H1>
-<PRE>
+</H1><PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat simple.pegjs 
 /* From the Wikipedia
 Value   ← [0-9]+ / '(' Expr ')'
@@ -135,14 +134,13 @@ product = left:value right:($[*/] value)*   { return reduce(left, right); }
 value   = number:$[0-9]+                    { return parseInt(number,10); }
         / '(' sum:sum ')'                   { return sum; }
 </PRE>
-
 <P>
-Es posible especificar mediante llaves  un código 
+<I>Es posible especificar mediante llaves  un código 
 que este disponible dentro de las acciones semánticas.
-
+</I>
 <P>
-Ejecución:
-<PRE>
+<I>Ejecución:
+</I><PRE>
 [~/pegjs/examples(master)]$ cat use_simple.js 
 var PEG = require("./simple.js");
 var r = PEG.parse("2-3-4");
@@ -150,9 +148,9 @@ console.log(r);
 
 [~/pegjs/examples(master)]$ node use_simple.js 
 -5
-</PRE>
+</PRE><I>
 Veamos otra ejecución:
-<PRE>
+</I><PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat use_simple.js 
 var PEG = require("./simple.js");
 var r = PEG.parse("2+3*(2+1)-10/2");
@@ -162,9 +160,7 @@ console.log(r);
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ node use_simple.js 
 6
 </PRE>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1485"
   HREF="node36.html">
