--- a/node40.html
+++ b/node40.html
@@ -116,26 +116,16 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION044120000000000000000">
 Usando Pegjs con CoffeeScript</A>
 </H1>
-
 <P>
-
 <H4><A NAME="SECTION044120010000000000000">
 Instalación de pegjs-coffee-plugin</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ sudo  npm install -g pegjs-coffee-plugin
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION044120020000000000000">
 Ejemplo Sencillo</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs-coffee-plugin/examples(master)]$ cat simple.pegjs 
 { 
   @reduce = (left, right)-&gt;  
@@ -157,17 +147,13 @@ product = left:value right:([*/] value)*   { @reduce(left, right); }
 value   = number:[0-9]+                    { parseInt(number.join(''),10) }
         / '(' sum:sum ')'                  { sum }
 </PRE>
-
-<P>
-<PRE>
+<P><PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs-coffee-plugin/examples(master)]$  cat use_simple.coffee 
 PEG = require("./simple.js")
 r = PEG.parse("2+3*(2+1)-10/2")
 console.log(r)
 </PRE>
-
-<P>
-<PRE>
+<P><PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs-coffee-plugin/examples(master)]$ cat Rakefile 
 
 task :default do 
@@ -178,32 +164,24 @@ task :run do
   sh "coffee use_simple.coffee"
 end
 </PRE>
-
-<P>
-<PRE>
+<P><PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs-coffee-plugin/examples(master)]$ rake
 pegcoffee simple.pegjs
 [~/Dropbox/src/javascript/PLgrado/pegjs-coffee-plugin/examples(master)]$ rake run
 coffee use_simple.coffee
 6
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION044120030000000000000">
 Véase También</A>
 </H4>
-  
-
 <UL>
 <LI><A NAME="tex2html234"
   HREF="https://github.com/Dignifiedquire/pegjs-coffee-plugin">pegjs-coffee-plugin</A>
 en GitHub
 </LI>
 </UL>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1566"
   HREF="node41.html">
