--- a/node45.html
+++ b/node45.html
@@ -111,13 +111,12 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="section:conceptos"></A>
 <BR>
 Conceptos Básicos para el Análisis Sintáctico
-</H1>
+</H1><I>
 Suponemos que el lector de esta sección ha realizado con éxito
 un curso en teoría de autómatas y lenguajes formales.
 Las siguientes definiciones repasan los conceptos mas importantes.
-
-<P>
-<P>
+</I>
+<P><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>Dado un conjunto <SPAN CLASS="MATH"><IMG
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
@@ -154,9 +153,7 @@ la palabra que tiene longitud cero, formada por cero símbolos del conjunto base
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img1.png"
  ALT="$ A$"></SPAN>.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
 <I>Una gramática <SPAN CLASS="MATH"><IMG
  WIDTH="19" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
@@ -210,9 +207,7 @@ Un elemento de <SPAN CLASS="MATH"><IMG
  WIDTH="19" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img9.png"
  ALT="$ V$"></SPAN> que se denomina símbolo de arranque.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">3</SPAN></B> &nbsp; 
 <I>Dada una gramática <!-- MATH
  $G=(\Sigma,V,P,S)$
@@ -296,9 +291,7 @@ que <!-- MATH
  ALT="$ \mu \stackrel{*}{\Longrightarrow} \delta$"></SPAN>. Una cadena deriva en 0 pasos en si misma.
 </I>
 <P></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><A NAME="definition:lenguajegenerado"><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">4</SPAN></B></A> &nbsp; 
 <I>Dada una gramática <!-- MATH
  $G=(\Sigma,V,P,S)$
@@ -329,9 +322,7 @@ generado por <SPAN CLASS="MATH"><IMG
  SRC="img6.png"
  ALT="$ G$"></SPAN> esta formado por las cadenas
 de terminales que pueden ser derivados desde el símbolo de arranque.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">5</SPAN></B> &nbsp; 
 <I>Una derivación que comienza en el símbolo de arranque y termina en una secuencia
 formada por sólo terminales de <SPAN CLASS="MATH"><IMG
@@ -384,9 +375,7 @@ en la cual en cada paso <!-- MATH
  SRC="img16.png"
  ALT="$ A \rightarrow \gamma$"></SPAN>
 se aplica en la variable sintáctica mas a la izquierda se dice <SPAN  CLASS="textbf">una derivación a izquierdas</SPAN></I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">6</SPAN></B> &nbsp; 
 <I>Observe que una derivación puede ser representada como un árbol cuyos nodos
 están etiquetados en <!-- MATH
@@ -420,11 +409,9 @@ la frase <!-- MATH
  WIDTH="110" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img31.png"
  ALT="$ \gamma = X_1 \ldots X_n$"></SPAN>.  
-Este árbol se llama <A NAME="6748"></A><SPAN  CLASS="textbf">árbol sintáctico concreto</SPAN> asociado 
+Este árbol se llama <A NAME="6760"></A><SPAN  CLASS="textbf">árbol sintáctico concreto</SPAN> asociado 
 con la derivación.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><A NAME="definition:arbolconcreto"><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">7</SPAN></B></A> &nbsp; 
 <I>Observe que, dada una frase <!-- MATH
  $x \in L(G)$
@@ -450,9 +437,7 @@ de análisis sintáctico concreto</SPAN> de <SPAN CLASS="MATH"><IMG
  SRC="img34.png"
  ALT="$ x$"></SPAN>. Una derivación determina
 una forma de recorrido del árbol de análisis sintáctico concreto.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">8</SPAN></B> &nbsp; 
 <I>Una gramática <SPAN CLASS="MATH"><IMG
  WIDTH="19" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
@@ -474,21 +459,21 @@ alguna frase <!-- MATH
  SRC="img32.png"
  ALT="$ x \in L(G)$"></SPAN> para la cual existen dos derivaciones a 
 izquierda (derecha) distintas.</I></DIV><P></P>
-
 <P>
-
 <H2><A NAME="SECTION04511000000000000000"></A>
 <A NAME="ejercicio:tutugrammar"></A>
 <BR>
 Ejercicio
-</H2>
+</H2><I>
 Dada la gramática con producciones:
-
+</I>
 <P>
+<I>
 <BR>
 <BR>
-<TABLE CELLPADDING=3>
-<TR><TD ALIGN="LEFT">program      <!-- MATH
+</I><TABLE CELLPADDING=3>
+<TR><TD ALIGN="LEFT"><I>
+program      <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -497,9 +482,10 @@ Dada la gramática con producciones:
  ALT="$ \rightarrow$"></SPAN> declarations  statements         <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> statements</TD>
+ ALT="$ \vert$"></SPAN> statements</I></TD>
 </TR>
-<TR><TD ALIGN="LEFT">declarations <!-- MATH
+<TR><TD ALIGN="LEFT"><I> 
+declarations <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -508,9 +494,10 @@ Dada la gramática con producciones:
  ALT="$ \rightarrow$"></SPAN> declaration  ';'  declarations    <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> declaration ';'</TD>
+ ALT="$ \vert$"></SPAN> declaration ';'</I></TD>
 </TR>
-<TR><TD ALIGN="LEFT">declaration  <!-- MATH
+<TR><TD ALIGN="LEFT"><I> 
+declaration  <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -519,9 +506,10 @@ Dada la gramática con producciones:
  ALT="$ \rightarrow$"></SPAN> INT  idlist                       <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> STRING   idlist</TD>
+ ALT="$ \vert$"></SPAN> STRING   idlist</I></TD>
 </TR>
-<TR><TD ALIGN="LEFT">statements   <!-- MATH
+<TR><TD ALIGN="LEFT"><I> 
+statements   <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -530,9 +518,10 @@ Dada la gramática con producciones:
  ALT="$ \rightarrow$"></SPAN> statement  ';'  statements        <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> statement</TD>
+ ALT="$ \vert$"></SPAN> statement</I></TD>
 </TR>
-<TR><TD ALIGN="LEFT">statement    <!-- MATH
+<TR><TD ALIGN="LEFT"><I> 
+statement    <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -541,9 +530,10 @@ Dada la gramática con producciones:
  ALT="$ \rightarrow$"></SPAN> ID '=' expression                 <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> P  expression</TD>
+ ALT="$ \vert$"></SPAN> P  expression</I></TD>
 </TR>
-<TR><TD ALIGN="LEFT">expression   <!-- MATH
+<TR><TD ALIGN="LEFT"><I> 
+expression   <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -552,9 +542,10 @@ Dada la gramática con producciones:
  ALT="$ \rightarrow$"></SPAN> term '+' expression               <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> term</TD>
+ ALT="$ \vert$"></SPAN> term</I></TD>
 </TR>
-<TR><TD ALIGN="LEFT">term         <!-- MATH
+<TR><TD ALIGN="LEFT"><I> 
+term         <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -563,9 +554,10 @@ Dada la gramática con producciones:
  ALT="$ \rightarrow$"></SPAN> factor '*' term                   <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> factor</TD>
+ ALT="$ \vert$"></SPAN> factor</I></TD>
 </TR>
-<TR><TD ALIGN="LEFT">factor       <!-- MATH
+<TR><TD ALIGN="LEFT"><I> 
+factor       <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -580,9 +572,10 @@ Dada la gramática con producciones:
  ALT="$ \vert$"></SPAN> NUM <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> STR</TD>
+ ALT="$ \vert$"></SPAN> STR</I></TD>
 </TR>
-<TR><TD ALIGN="LEFT">idlist       <!-- MATH
+<TR><TD ALIGN="LEFT"><I> 
+idlist       <!-- MATH
  $\rightarrow$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -591,14 +584,15 @@ Dada la gramática con producciones:
  ALT="$ \rightarrow$"></SPAN> ID ',' idlist <SPAN CLASS="MATH"><IMG
  WIDTH="10" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img36.png"
- ALT="$ \vert$"></SPAN> ID</TD>
+ ALT="$ \vert$"></SPAN> ID
+</I></TD>
 </TR>
-</TABLE>
+</TABLE><I>
 <BR>
 <BR>
-
+</I>
 <P>
-En esta gramática, <SPAN CLASS="MATH"><IMG
+<I>En esta gramática, <SPAN CLASS="MATH"><IMG
  WIDTH="17" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img8.png"
  ALT="$ \Sigma$"></SPAN> esta formado por los caracteres entre comillas simples y 
@@ -612,14 +606,13 @@ corresponden a elementos de <SPAN CLASS="MATH"><IMG
 <SPAN CLASS="MATH"><IMG
  WIDTH="107" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img99.png"
- ALT="% latex2html id marker 17859
+ ALT="% latex2html id marker 17891
 $ S = program$"></SPAN>.
-
+</I>
 <P>
-Conteste a las siguientes cuestiones:
-
+<I>Conteste a las siguientes cuestiones:
+</I>
 <P>
-
 <OL>
 <LI>Describa con palabras el lenguaje generado.
 </LI>
@@ -632,9 +625,7 @@ derivaciones a izquierda y a derecha en el apartado <A HREF="#ejer:arbol">2</A>.
 <LI>¿Es ambigua esta gramática?. Justifique su respuesta.
 </LI>
 </OL>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1707"
   HREF="node46.html">
