--- a/node47.html
+++ b/node47.html
@@ -133,9 +133,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BR>
 Ejemplo en Jison: Calculadora Simple
 </H1>
-
 <P>
-
 <OL>
 <LI>Enlace al fork  <A NAME="tex2html276"
   HREF="https://github.com/crguezl/jison/tree/develop/examples/html_calc_example">del proyecto jison de crguezl</A>
@@ -144,10 +142,7 @@ Ejemplo en Jison: Calculadora Simple
 </OL>
 <H4><A NAME="SECTION04530010000000000000">
 calculator.jison</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 [~/jison/examples/html_calc_example(develop)]$ cat calculator.jison 
 
 /* description: Parses end executes mathematical expressions. */
@@ -222,15 +217,10 @@ e
         {$$ = Math.PI;}
     ;
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04530020000000000000">
 main.js</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 [~/jison/examples/html_calc_example(develop)]$ cat main.js
 $(document).ready(function () {
   $("button").click(function () {
@@ -243,15 +233,10 @@ $(document).ready(function () {
   });
 });
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04530030000000000000">
 calculator.html</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 [~/jison/examples/html_calc_example(develop)]$ cat calculator.html 
 &lt;!DOCTYPE HTML&gt;
 &lt;html lang="en"&gt;
@@ -274,15 +259,10 @@ calculator.html</A>
   &lt;/body&gt;
 &lt;/html&gt;
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04530040000000000000">
 Rakefile</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 [~/jisoncalc(clase)]$ cat Rakefile 
 task :default =&gt; %w{calcugly.js} do
   sh "jsbeautify calcugly.js &gt; calculator.js"
@@ -301,16 +281,11 @@ task :tests do
   sh "open -a safari test/test.html"
 end
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04530050000000000000">
 global.css</A>
 </H4>
-  
-
-<P>
-<PRE>
+<P><PRE>
 [~/jison/examples/html_calc_example(develop)]$ cat global.css
 html *
 {
@@ -355,15 +330,10 @@ body
  background-color:#b0c4de;  /* blue */
 }
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04530060000000000000">
 test/assert.html</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 $ cat test/assert.js 
 var output = document.getElementById('output');
 
@@ -375,16 +345,11 @@ function assert( outcome, description) {
   output.appendChild(li);
 };
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04530070000000000000">
 test/test.css</A>
 </H4>
-  
-
-<P>
-<PRE>
+<P><PRE>
 ~/jisoncalc(clase)]$ cat test/test.css 
 .pass:before {
   content: 'PASS: ';
@@ -399,16 +364,11 @@ test/test.css</A>
   
 }
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04530080000000000000">
 test/test.html</A>
 </H4>
-  
-
-<P>
-<PRE>
+<P><PRE>
 [~/jisoncalc(clase)]$ cat test/test.html
 &lt;!DOCTYPE HTML&gt;
 &lt;html lang="en"&gt;
@@ -440,20 +400,18 @@ test/test.html</A>
   &lt;/body&gt;
 &lt;/html&gt;
 </PRE>
-
 <P>
-
 <H2><A NAME="SECTION04531000000000000000"></A>
-   <A NAME="6809"></A>
+   <A NAME="6821"></A>
   
 <A NAME="subsectionpractica:calculadora"></A>
 <BR>
 Práctica: Calculadora con Listas de Expresiones y Variables
-</H2>
+</H2><I>
 Modifique la calculadora vista en la sección anterior 
 <A HREF="#section:calculadora">5.3</A>
 para que el lenguaje cumpla los siguientes requisitos:
-
+</I>
 <UL>
 <LI>Extienda el lenguaje de la calculadora para que admita expresiones
 de asignación <code>a = 2*3</code>
@@ -481,9 +439,7 @@ la sección <A HREF="node125.html#section:tstingfacil"><IMG  ALIGN="BOTTOM" BORD
 <P>
 </LI>
 </UL>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1744"
   HREF="node48.html">
