--- a/node52.html
+++ b/node52.html
@@ -99,52 +99,54 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04580000000000000000"></A>
-   <A NAME="6905"></A>
+   <A NAME="6917"></A>
   
 <A NAME="section:calculadoraampliada"></A>
 <BR>
 Práctica: Traducción de Infijo a Postfijo
-</H1>
+</H1><I>
 Modifique el programa Jison realizado en la práctica 
 <A HREF="node47.html#subsectionpractica:calculadora">5.3.1</A>
 para traducir de infijo a postfijo. 
 Añada los operadores de comparación e igualdad.
 Por ejemplo
-
+</I>
 <P>
-<DIV ALIGN="CENTER">
-<TABLE CELLPADDING=3 BORDER="1">
-<TR><TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170>Infijo</TD>
-<TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170>Postfijo</TD>
+<DIV ALIGN="CENTER"><TABLE CELLPADDING=3 BORDER="1">
+<TR><TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><I>
+Infijo              </I></TD>
+<TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><I> Postfijo </I></TD>
 </TR>
-<TR><TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><code>a = 3+2*4</code></TD>
-<TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><code> 3 2 4 * + &amp;a = </code></TD>
+<TR><TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><I> 
+<code>a = 3+2*4</code>    </I></TD>
+<TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><I>  <code> 3 2 4 * + &amp;a = </code></I></TD>
 </TR>
-<TR><TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><code>b = a == 11</code></TD>
-<TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><code> a 11 == &amp;b = </code></TD>
+<TR><TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><I> 
+<code>b = a == 11</code>  </I></TD>
+<TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><I>  <code> a 11 == &amp;b = </code>
+</I></TD>
 </TR>
-</TABLE>
-</DIV>
+</TABLE></DIV><I>
 En estas traducciones la notación 
 <code>&amp;a</code> indica la dirección de la variable <code>a</code>
 y <code>a</code> indica el valor almacenado en la variable <code>a</code>.
-
+</I>
 <P>
-Añada sentencias 
+<I>Añada sentencias 
 <code>if</code> ...
 <code>then</code> e <code>if</code> ... <code>then</code> ... <code>else</code>
-
+</I>
 <P>
-Para realizar la traducción de estas sentencias
+<I>Para realizar la traducción de estas sentencias
 añada 
 instrucciones <code>jmp label</code> y <code>jmpz label</code> (por <I>jump if zero</I>)
 y etiquetas:
-
+</I>
 <P>
-<DIV ALIGN="CENTER">
-<TABLE CELLPADDING=3 BORDER="1">
-<TR><TD ALIGN="LEFT" VALIGN="TOP" WIDTH=227>Infijo</TD>
-<TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170>Postfijo</TD>
+<DIV ALIGN="CENTER"><TABLE CELLPADDING=3 BORDER="1">
+<TR><TD ALIGN="LEFT" VALIGN="TOP" WIDTH=227><I>
+Infijo              </I></TD>
+<TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><I> Postfijo </I></TD>
 </TR>
 <TR><TD ALIGN="LEFT" VALIGN="TOP" WIDTH=227><PRE>
 a = (2+5)*3;
@@ -179,14 +181,12 @@ c = b + 1;
         =
 </PRE></TD>
 </TR>
-</TABLE>
-</DIV>
+</TABLE></DIV><I>
 Parta del repositorio 
 <A NAME="tex2html294"
   HREF="https://github.com/crguezl/jison-simple-html-calc">https://github.com/crguezl/jison-simple-html-calc</A>.
-
+</I>
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1829"
   HREF="node53.html">
