--- a/node53.html
+++ b/node53.html
@@ -99,18 +99,16 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04590000000000000000"></A>
-   <A NAME="6907"></A>
+   <A NAME="6919"></A>
 <BR>
 Práctica: Calculadora  con Funciones
 </H1>
-
 <P>
-Añada funciones y sentencias de llamada a función a la práctica de traducción 
+<I>Añada funciones y sentencias de llamada a función a la práctica de traducción 
 de infijo a postfijo
 <A HREF="node52.html#section:calculadoraampliada">5.8</A>. Sigue un ejemplo de traducción:
-
-<P>
-<TABLE CELLPADDING=3 BORDER="1">
+</I>
+<P><TABLE CELLPADDING=3 BORDER="1">
 <TR><TD ALIGN="LEFT" VALIGN="TOP" WIDTH=170><PRE>
 def f(x) { x + 1 }
 def g(a, b) { a * f(b) }
@@ -144,7 +142,6 @@ g(3, 4)
 </PRE></TD>
 </TR>
 </TABLE>
-
 <UL>
 <LI>Las funciones retornan la última expresión evaluada
 </LI>
@@ -164,9 +161,7 @@ prefijándolos con <code>$</code>.
 y retorna la última expresión evaluada
 </LI>
 </UL>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1843"
   HREF="node54.html">
