--- a/node70.html
+++ b/node70.html
@@ -121,23 +121,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="section:eyapaat"></A>
 <BR>
 Árbol de Análisis Abstracto
-</H1>
-Un <A NAME="9130"></A><SPAN  CLASS="textbf">árbol de análisis abstracto</SPAN>  (denotado <A NAME="9132"></A><SPAN  CLASS="textbf">AAA</SPAN>, en
-inglés <A NAME="9134"></A><SPAN  CLASS="textbf">abstract syntax tree</SPAN> o <A NAME="9136"></A><SPAN  CLASS="textbf">AST</SPAN>) 
+</H1><I>
+Un <A NAME="9142"></A><SPAN  CLASS="textbf">árbol de análisis abstracto</SPAN>  (denotado <A NAME="9144"></A><SPAN  CLASS="textbf">AAA</SPAN>, en
+inglés <A NAME="9146"></A><SPAN  CLASS="textbf">abstract syntax tree</SPAN> o <A NAME="9148"></A><SPAN  CLASS="textbf">AST</SPAN>) 
 porta la misma información que
 el árbol de análisis sintáctico pero de forma mas condensada, eliminándose
 terminales y producciones que no aportan información.
-
+</I>
 <P>
-
 <H4><A NAME="SECTION04710010000000000000">
 Alfabeto con Aridad o Alfabeto Árbol</A>
-</H4>
-  
-
-<P>
+</H4><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Un <A NAME="9142"></A><SPAN  CLASS="textbf">alfabeto con función de aridad</SPAN> es un par <!-- MATH
+<I>Un <A NAME="9154"></A><SPAN  CLASS="textbf">alfabeto con función de aridad</SPAN> es un par <!-- MATH
  $(\Sigma, \rho)$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -158,7 +154,7 @@ donde <SPAN CLASS="MATH"><IMG
  WIDTH="90" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img223.png"
  ALT="$ \rho: \Sigma \rightarrow \mathds{N}_0$"></SPAN>, denominada 
-<A NAME="9144"></A><SPAN  CLASS="textbf">función de aridad</SPAN>.
+<A NAME="9156"></A><SPAN  CLASS="textbf">función de aridad</SPAN>.
 Denotamos por <!-- MATH
  $\Sigma_k = \{ a \in \Sigma :\ \rho(a) = k \}$
  -->
@@ -168,20 +164,19 @@ Denotamos por <!-- MATH
  ALT="$ \Sigma_k = \{ a \in \Sigma : \rho(a) = k \}$"></SPAN>.
 </I>
 <P></DIV><P></P>
-
+</I>
 <H4><A NAME="SECTION04710020000000000000">
 Lenguaje de los Arboles</A>
-</H4>
-  
+</H4><I>
 
-Definimos el <A NAME="9150"></A><SPAN  CLASS="textbf">lenguaje árbol homogéneo</SPAN> <SPAN CLASS="MATH"><IMG
+Definimos el <A NAME="9162"></A><SPAN  CLASS="textbf">lenguaje árbol homogéneo</SPAN> <SPAN CLASS="MATH"><IMG
  WIDTH="45" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img225.png"
  ALT="$ B(\Sigma)$"></SPAN> sobre <SPAN CLASS="MATH"><IMG
  WIDTH="17" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img8.png"
  ALT="$ \Sigma$"></SPAN> inductivamente:
-
+</I>
 <UL>
 <LI>Todos los elementos de aridad 0 están en <SPAN CLASS="MATH"><IMG
  WIDTH="45" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
@@ -225,13 +220,12 @@ implica <!-- MATH
  SRC="img231.png"
  ALT="$ f(b_1, \ldots , b_k) \in B(\Sigma)$"></SPAN>
 </LI>
-</UL>
+</UL><I>
 Los elementos de <SPAN CLASS="MATH"><IMG
  WIDTH="45" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img225.png"
- ALT="$ B(\Sigma)$"></SPAN> se llaman  <A NAME="9152"></A><SPAN  CLASS="textbf">árboles</SPAN> o <A NAME="9154"></A><SPAN  CLASS="textbf">términos</SPAN>.
-<P>
-<P>
+ ALT="$ B(\Sigma)$"></SPAN> se llaman  <A NAME="9164"></A><SPAN  CLASS="textbf">árboles</SPAN> o <A NAME="9166"></A><SPAN  CLASS="textbf">términos</SPAN>.</I>
+<P><P>
 <DIV><B>Ejemplo  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>Sea <!-- MATH
  $\Sigma = \{A, CONS, NIL \}$
@@ -256,9 +250,7 @@ Entonces
  WIDTH="707" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img234.png"
  ALT="$ B(\Sigma) = \{ A, NIL, CONS(A,NIL), CONS(NIL, A), CONS(A, A), CONS(NIL,NIL), \ldots \}$"></SPAN></I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><A NAME="example:eyaptutuast"><B>Ejemplo  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">2</SPAN></B></A> &nbsp; 
 <I>Una versión simplificada del alfabeto con aridad en el que estan basados
 los árboles construidos por el compilador de Tutu es:
@@ -319,17 +311,12 @@ es un elemento de <SPAN CLASS="MATH"><IMG
  WIDTH="45" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img225.png"
  ALT="$ B(\Sigma)$"></SPAN>.</I></DIV><P></P>
-
 <P>
-
 <H4><A NAME="SECTION04710030000000000000">
 Gramática Árbol</A>
-</H4>
-  
-
-<P>
+</H4><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
-<I>Una <A NAME="9160"></A><SPAN  CLASS="textbf">gramática árbol regular</SPAN> es una cuadrupla <!-- MATH
+<I>Una <A NAME="9172"></A><SPAN  CLASS="textbf">gramática árbol regular</SPAN> es una cuadrupla <!-- MATH
  $((\Sigma, \rho), N, P, S)$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -386,16 +373,11 @@ donde:
 </LI>
 </UL>
 <P></DIV><P></P>
-
 <P>
-
 <H4><A NAME="SECTION04710040000000000000">
 Lenguaje Generado por una Gramática Árbol</A>
 </H4>
-  
-
-<P>
-<P>
+<P><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">3</SPAN></B> &nbsp; 
 <I>Dada una gramática <!-- MATH
  $(\Sigma, N, P, S)$
@@ -456,9 +438,7 @@ diremos que la producción <SPAN CLASS="MATH"><IMG
  WIDTH="138" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img255.png"
  ALT="$ (X_1, \ldots X_n) \rightarrow X$"></SPAN>.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">4</SPAN></B> &nbsp; 
 <I>Consideremos un árbol  <!-- MATH
  $t \in B(\Sigma \cup N)$
@@ -497,7 +477,7 @@ en el árbol leídas de izquierda a derecha son <!-- MATH
 decimos que el árbol <SPAN CLASS="MATH"><IMG
  WIDTH="11" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img250.png"
- ALT="$ t$"></SPAN> <A NAME="9166"></A><SPAN  CLASS="textbf">deriva en un paso en el árbol</SPAN>
+ ALT="$ t$"></SPAN> <A NAME="9178"></A><SPAN  CLASS="textbf">deriva en un paso en el árbol</SPAN>
 <SPAN CLASS="MATH"><IMG
  WIDTH="16" HEIGHT="20" ALIGN="BOTTOM" BORDER="0"
  SRC="img257.png"
@@ -577,11 +557,9 @@ En general, si <SPAN CLASS="MATH"><IMG
  ALT="$ t \stackrel{*}{\Longrightarrow} t'$"></SPAN>.
 </LI>
 </UL></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">5</SPAN></B> &nbsp; 
-<I>Se define el <A NAME="9168"></A><SPAN  CLASS="textbf">lenguaje árbol generado por una gramática</SPAN> <!-- MATH
+<I>Se define el <A NAME="9180"></A><SPAN  CLASS="textbf">lenguaje árbol generado por una gramática</SPAN> <!-- MATH
  $G = (\Sigma, N, P, S)$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -595,9 +573,7 @@ como el lenguaje <!-- MATH
  WIDTH="232" HEIGHT="45" ALIGN="MIDDLE" BORDER="0"
  SRC="img266.png"
  ALT="$ L(G) = \{ t \in B(\Sigma): \exists S \stackrel{*}{\Longrightarrow} t \}$"></SPAN>.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><A NAME="example:eyaplisttreegrammar"><B>Ejemplo  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">3</SPAN></B></A> &nbsp; 
 <I>Sea <!-- MATH
  $G = (\Sigma, V, P, S)$
@@ -677,9 +653,7 @@ En este ejemplo, <SPAN CLASS="MATH"><IMG
  SRC="img271.png"
  ALT="$ L(G) = \{ NIL, CONS(A, NIL), CONS(A, CONS(A,NIL)), \ldots \}$"></SPAN></I></DIV>
 <P></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejercicio  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>Construya una derivación para el árbol <!-- MATH
  $CONS(A, CONS(A,NIL))$
@@ -695,9 +669,8 @@ En este ejemplo, <SPAN CLASS="MATH"><IMG
  WIDTH="313" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img273.png"
  ALT="$ CONS(exp, CONS(A, CONS(exp,L)))$"></SPAN>?.</I></DIV><P></P>
-
 <P>
-Cuando hablamos del AAA producido por un analizador sintáctico,
+<I>Cuando hablamos del AAA producido por un analizador sintáctico,
 estamos en realidad hablando de un lenguaje árbol cuya definición 
 precisa debe hacerse a través de una gramática
 árbol regular.
@@ -705,9 +678,8 @@ Mediante las gramáticas árbol regulares disponemos de un mecanismo para
 describir formalmente el lenguaje de los 
 AAA que producirá el analizador sintáctico
 para las sentencias Tutu.
-
-<P>
-<P>
+</I>
+<P><P>
 <DIV><A NAME="example:eyaptututreegrammar"><B>Ejemplo  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">4</SPAN></B></A> &nbsp; 
 <I>Sea <!-- MATH
  $G = (\Sigma, V, P, S)$
@@ -985,9 +957,7 @@ como el siguiente:
 <P>
 <I>El lenguaje de árboles descrito por esta gramática árbol 
 es el lenguaje de los AAA de las sentencias de Tutu.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejercicio  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
 <I>Redefina el concepto de árbol de análisis concreto dado
 en la definición <A HREF="node45.html#definition:arbolconcreto">5.1.7</A> utilizando el
@@ -1023,9 +993,7 @@ la aricidad de los elementos de <SPAN CLASS="MATH"><IMG
  SRC="img295.png"
  ALT="$ \Omega$"></SPAN>. Discuta posibles
 soluciones.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejercicio  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">3</SPAN></B> &nbsp; 
 <I>¿Cómo son los árboles sintácticos en las derivaciones árbol?
 Dibuje varios árboles sintácticos para las gramáticas 
@@ -1036,15 +1004,10 @@ y <A HREF="node69.html#example:tututreegrammar"><IMG  ALIGN="BOTTOM" BORDER="1" 
 <P>
 <I>Intente dar una definición formal del concepto de árbol de análisis
 sintáctico asociado con una derivación en una gramática árbol</I></DIV><P></P>
-
 <P>
-
 <H4><A NAME="SECTION04710050000000000000">
 Notación de Dewey o Coordenadas de un Árbol</A>
-</H4>
-  
-
-<P>
+</H4><P>
 <DIV><A NAME="definition:eyapdewey"><B>Definición  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">6</SPAN></B></A> &nbsp; 
 <I>La notación de Dewey es una forma de especificar los subárboles
 de un árbol <!-- MATH
@@ -1112,9 +1075,7 @@ inductivamente el subárbol <SPAN CLASS="MATH"><IMG
  ALT="$ t/j.n = t_j/n$"></SPAN>
 </LI>
 </UL></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejercicio  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">4</SPAN></B> &nbsp; 
 <I>Sea el árbol:
 </I>
@@ -1246,9 +1207,7 @@ Calcule los subárboles <!-- MATH
  WIDTH="61" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img306.png"
  ALT="$ t/2\ldotp1\ldotp2$"></SPAN>.</I></DIV><P></P>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2140"
   HREF="node71.html">
