--- a/node74.html
+++ b/node74.html
@@ -118,14 +118,10 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION04750000000000000000">
 Treehugger</A>
 </H1>
-
 <P>
-
 <H4><A NAME="SECTION04750010000000000000">
 Donde</A>
 </H4>
-  
-
 <UL>
 <LI><PRE>
 [~/srcPLgrado/treehugger(master)]$ pwd -P
@@ -142,15 +138,10 @@ origin  git@github.com:crguezl/treehugger.git (push)
   HREF="https://github.com/crguezl/treehugger">https://github.com/crguezl/treehugger</A>
 </LI>
 </UL>
-
 <P>
-
 <H4><A NAME="SECTION04750020000000000000">
 learning.html</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 [~/srcPLgrado/treehugger(master)]$ cat learning.html 
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
@@ -197,16 +188,11 @@ ast.traverseTopDown(
   &lt;/body&gt;
 &lt;/html&gt;
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04750030000000000000">
 lib/demo.js</A>
 </H4>
-  
-
-<P>
-<PRE>
+<P><PRE>
 [~/srcPLgrado/treehugger(master)]$ cat lib/demo.js 
 require({ baseUrl: "lib" }, 
     ["treehugger/tree", 
@@ -256,14 +242,10 @@ require({ baseUrl: "lib" },
       }
 );
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04750040000000000000">
 Véase</A>
 </H4>
-  
-
 <UL>
 <LI><A NAME="tex2html328"
   HREF="https://github.com/crguezl/treehugger">treehugger.js is a Javascript library for program processing. It has generic means to represent and manipulate (analyze, transform) abstract syntax trees (ASTs).</A>
@@ -284,9 +266,7 @@ YouTube.
   HREF="http://requirejs.org/">RequireJS</A>
 </LI>
 </UL>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2212"
   HREF="node75.html">
