--- a/node88.html
+++ b/node88.html
@@ -411,7 +411,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html2589"
   HREF="node92.html">Bibliograf&#237;a</A>
 </UL>
-<!--End of Table of Contents-->
+<!--End of Table of Contents--></I>
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2458"
   HREF="node89.html">
