--- a/node90.html
+++ b/node90.html
@@ -103,9 +103,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 &#205;ndice de Tablas</A>
 </H2><OL>
 <LI><A NAME="tex2html159"
-  HREF="node20.html#3931">Una Gramática Simple</A></OL>
+  HREF="node20.html#3943">Una Gramática Simple</A></OL></I>
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2616"
   HREF="node91.html">
