--- a/node13.html
+++ b/node13.html
@@ -122,44 +122,36 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04160000000000000000"></A>
-   <A NAME="2966"></A>
+   <A NAME="2970"></A>
 <BR>
 Práctica: Palabras Repetidas
 </H1>
-
 <P>
-Se trata de producir una salida en las que las palabras repetidas consecutivas sean reducidas a una sola aparición.
+<I>Se trata de producir una salida en las que las palabras repetidas consecutivas sean reducidas a una sola aparición.
 Rellena las partes que faltan.
-
+</I>
 <P>
-
 <H4><A NAME="SECTION04160010000000000000">
 Donde</A>
 </H4>
-  
-
-<P>
-<PRE>
+<P><PRE>
 [~/srcPLgrado/repeatedwords(master)]$ pwd -P
 /Users/casiano/local/src/javascript/PLgrado/repeatedwords
 [~/srcPLgrado/repeatedwords(master)]$ git remote -v
 origin  ssh://git@bitbucket.org/casiano/pl-grado-repeated-words.git (fetch)
 origin  ssh://git@bitbucket.org/casiano/pl-grado-repeated-words.git (push)
 </PRE>
-
 <P>
-Véase:
+<I>Véase:
 <A NAME="tex2html103"
   HREF="https://bitbucket.org/casiano/pl-grado-repeated-words">https://bitbucket.org/casiano/pl-grado-repeated-words</A>
+</I>
 <P>
-
 <H4><A NAME="SECTION04160020000000000000">
 Ejemplo de ejecución</A>
 </H4>
-  
-
 <P>
-
+<I>
 <DIV ALIGN="CENTER"><A NAME="figure:csv"></A><A NAME="1213"></A>
 <TABLE>
 <CAPTION ALIGN="BOTTOM"><STRONG>Figura:</STRONG>
@@ -168,16 +160,13 @@ Ejemplo de pantalla de La aplicación para Repeated Words</CAPTION>
  WIDTH="769" HEIGHT="410" BORDER="0"
  SRC="repeated_words.png"
  ALT=""
-
+</I>
 <P>
-
 <H4><A NAME="SECTION04160030000000000000">
 Estructura</A>
 </H4>
-  
-
 <P>
-
+<I>
 <pre>
 [~/Dropbox/src/javascript/PLgrado/repeatedwords(master)]$  tree --charset utf-8 
 .
@@ -191,15 +180,11 @@ Estructura</A>
 
 0 directories, 7 files
 </pre>
-
+</I>
 <P>
-
 <H4><A NAME="SECTION04160040000000000000">
 index.html</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 [~/Dropbox/src/javascript/PLgrado/repeatedwords(master)]$ cat index.html 
 &lt;html&gt;
   &lt;head&gt;
@@ -230,9 +215,7 @@ index.html</A>
   &lt;/body&gt;
 &lt;/html&gt;
 </PRE>
-
 <P>
-
 <OL>
 <LI><A NAME="tex2html104"
   HREF="http://www.w3.org/TR/html-markup/input.file.html">Tag input</A>
@@ -241,11 +224,9 @@ index.html</A>
 <H4><A NAME="SECTION04160050000000000000">
 global.css</A>
 </H4>
-  
-
 <P>
-Rellena los estilos para <code>hidden</code> y <code>unhidden</code>:
-<PRE>
+<I>Rellena los estilos para <code>hidden</code> y <code>unhidden</code>:
+</I><PRE>
 [~/Dropbox/src/javascript/PLgrado/repeatedwords(master)]$ cat global.css 
 html *
 {
@@ -285,9 +266,7 @@ body
 {
  background-color:#b0c4de;  /* blue */
 </PRE>
-
 <P>
-
 <OL>
 <LI><A NAME="tex2html105"
   HREF="http://www.w3schools.com/cssref/pr_class_display.asp">CSS display Property</A>
@@ -299,11 +278,9 @@ body
 <H4><A NAME="SECTION04160060000000000000">
 repeated_words.js</A>
 </H4>
-  
-
 <P>
-Rellena las expresiones regulares que faltan:
-<PRE>
+<I>Rellena las expresiones regulares que faltan:
+</I><PRE>
 [~/srcPLgrado/repeatedwords(master)]$ cat repeated_words.js 
 "use strict"; // Use ECMAScript 5 strict mode in browsers that support it
 
@@ -350,9 +327,7 @@ function escapeHtml(string) {
     return ____________;
   });
 </PRE>
-
 <P>
-
 <OL>
 <LI><A NAME="tex2html107"
   HREF="http://api.jquery.com/event.target/">jQuery event.target</A>
@@ -379,15 +354,10 @@ function escapeHtml(string) {
   HREF="http://underscorejs.org/#template">Underscore: template</A>
 </LI>
 </OL>
-
 <P>
-
 <H4><A NAME="SECTION04160070000000000000">
 Ficheros de Entrada</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 [~/Dropbox/src/javascript/PLgrado/repeatedwords(master)]$ cat input2.txt 
 habia una vez 
 vez un viejo viejo
@@ -404,9 +374,7 @@ vez &amp; un viejo viejo &lt;puchum&gt;
 hidalgo  &amp; &lt;pacham&gt; que vivia 
 vivia &lt;/que se yo&gt;
 </PRE>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1032"
   HREF="node14.html">
