--- a/node16.html
+++ b/node16.html
@@ -126,29 +126,23 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04190000000000000000"></A>
-   <A NAME="3000"></A>
+   <A NAME="3004"></A>
 <BR>
 Práctica: Ficheros INI
 </H1>
-
 <P>
-
 <H4><A NAME="SECTION04190010000000000000">
 Donde</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 [~/srcPLgrado/ini(develop)]$ pwd -P
 /Users/casiano/local/src/javascript/PLgrado/ini
 [~/srcPLgrado/ini(develop)]$ git remote -v
 origin  ssh://git@bitbucket.org/casiano/pl-grado-ini-files.git (fetch)
 origin  ssh://git@bitbucket.org/casiano/pl-grado-ini-files.git (push)
 </PRE>
-
 <P>
-Véase
-
+<I>Véase
+</I>
 <UL>
 <LI>Repositorio conteniendo el código (inicial) del analizador de ficheros <code>ini</code>:
 <A NAME="tex2html116"
@@ -165,10 +159,7 @@ Véase
 </UL>
 <H4><A NAME="SECTION04190020000000000000">
 index.html</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 [~/javascript/PLgrado/ini(master)]$ cat index.html 
 &lt;html&gt;
   &lt;head&gt;
@@ -204,17 +195,13 @@ index.html</A>
   &lt;/body&gt;
 &lt;/html&gt;
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04190030000000000000">
 Ficheros</A>
 </H4>
-  
-
 <P>
-Vease
-
+<I>Vease
+</I>
 <UL>
 <LI><A NAME="tex2html119"
   HREF="http://www.html5rocks.com/en/tutorials/file/dndfiles/">Reading files in JavaScript using the File APIs</A>
@@ -311,14 +298,14 @@ Suppose you have a table and within that table you have an anchor
 Formally, the event path is broken into three phases. 
       
 <UL>
-<LI>In the <A NAME="3013"></A><SPAN  CLASS="textbf">capture phase</SPAN>, the event starts at the top of the DOM tree, and propagates through
+<LI>In the <A NAME="3017"></A><SPAN  CLASS="textbf">capture phase</SPAN>, the event starts at the top of the DOM tree, and propagates through
       to the parent of the target. 
 </LI>
-<LI>In the <A NAME="3015"></A><SPAN  CLASS="textbf">target phase</SPAN>, the event object arrives
+<LI>In the <A NAME="3019"></A><SPAN  CLASS="textbf">target phase</SPAN>, the event object arrives
       at its target. This is generally where you will write your event-handling
       code. 
 </LI>
-<LI>In the <A NAME="3017"></A><SPAN  CLASS="textbf">bubble phase</SPAN>, the event will move back up through the tree
+<LI>In the <A NAME="3021"></A><SPAN  CLASS="textbf">bubble phase</SPAN>, the event will move back up through the tree
       until it reaches the top. Bubble phase propagation happens in reverse
       order to the capture phase, with an event starting at the parent of
       the target and ending up back at the top of the DOM tree. 
@@ -429,16 +416,11 @@ Once one of these read methods is called on your <code>FileReader</code> object,
 </UL>
 </LI>
 </UL>
-
 <P>
-
 <H4><A NAME="SECTION04190040000000000000">
 global.css</A>
 </H4>
-  
-
-<P>
-<PRE>
+<P><PRE>
 [~/javascript/PLgrado/ini(master)]$ cat global.css 
 html *
 {
@@ -484,16 +466,11 @@ body
  background-color:#b0c4de;  /* blue */
 }
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04190050000000000000">
 Ficheros de Prueba</A>
 </H4>
-  
-
-<P>
-<PRE>
+<P><PRE>
 ~/Dropbox/src/javascript/PLgrado/ini(master)]$ cat input.ini 
 ; last modified 1 April 2001 by John Doe
 [owner]
@@ -506,9 +483,7 @@ server=192.0.2.62
 port=143
 file = "payroll.dat"
 </PRE>
-
-<P>
-<PRE>
+<P><PRE>
 $ cat input2.ini 
 [special_fields] 
 required = "EmailAddr,FirstName,LastName,Mesg" 
@@ -518,9 +493,7 @@ csvcolumns = "EmailAddr,FirstName,LastName,Mesg,Date,Time"
 [email_addresses] 
 sales = "jack@yahoo.com,mary@my-sales-force.com,president@my-company.com"
 </PRE>
-
-<P>
-<PRE>
+<P><PRE>
 $ cat inputerror.ini
 [owner]
 name=John Doe
@@ -532,16 +505,11 @@ server=192.0.2.62
 port=143
 file = "payroll.dat"
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04190060000000000000">
 ini.js</A>
 </H4>
-  
-
-<P>
-<PRE>
+<P><PRE>
 [~/javascript/PLgrado/ini(master)]$ cat ini.js
 "use strict"; // Use ECMAScript 5 strict mode in browsers that support it
 
@@ -621,28 +589,26 @@ function lexer(input) {
   }
   return out;
 }
-</PRE>
+</PRE><I>
 Véase la sección <I>JSON.stringify()</I>
 <A HREF="node10.html#parrafo:jsonstringify">1.3</A>
 para saber mas sobre <code>JSON.stringify</code>.
-
+</I>
 <P>
-
 <H4><A NAME="SECTION04190070000000000000">
 Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
-</H4>
-  
+</H4><I>
 
 <A NAME="parrafo:inifile"></A>La sintáxis de <code>INI</code> no está bien definida.
 Se aceptan decisiones razonables para cada una de las expresiones regulares.
 Si quiere ver un parser en acción puede
 instalar la gema <code>inifile</code> (Ruby). 
-
+</I>
 <P>
-Una opción que no hemos contemplado en nuestro código es la posibilidad de hacer que una línea de asignación se expanda en varias líneas.
+<I>Una opción que no hemos contemplado en nuestro código es la posibilidad de hacer que una línea de asignación se expanda en varias líneas.
 En <code>inifile</code> el carácter <code>\</code> indica 
 que la línea continúa en la siguiente:
-<PRE>
+</I><PRE>
 [~/javascript/PLgrado/inifile(master)]$ cat test/data/good.ini 
 [section_one]
 one = 1
@@ -663,14 +629,11 @@ six =6
    [section_five]
  seven and eight= 7 &amp; 8
 </PRE>
-
-<P>
-<PRE>
+<P><PRE>
 [~/javascript/PLgrado/inifile(master)]$ pry
 [2] pry(main)&gt; require 'inifile'
 =&gt; true
-</PRE>
-<PRE>
+</PRE><PRE>
 [3] pry(main)&gt; p = IniFile.new(:filename =&gt; 'test/data/good.ini')
 =&gt; #&lt;IniFile:0x007fba2f41a500
  @_line=" seven and eight= 7 &amp; 8",
@@ -690,24 +653,18 @@ six =6
    "section_five"=&gt;{"seven and eight"=&gt;"7 &amp; 8"}},
  @param="="&gt;
 </PRE>
-
-<P>
-<PRE>
+<P><PRE>
 [4] pry(main)&gt; p["section_two"]
 =&gt; {"three"=&gt;"3", "multi"=&gt;"multiline support"}
 [5] pry(main)&gt; p[:section_two]
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04190080000000000000">
 Tareas</A>
 </H4>
-  
-
 <P>
-Es conveniente que consiga estos objetivos:
-
+<I>Es conveniente que consiga estos objetivos:
+</I>
 <UL>
 <LI>Pueden comenzar haciendo un fork del repositorio
 <A NAME="tex2html139"
@@ -738,16 +695,11 @@ Es conveniente que consiga estos objetivos:
 </PRE>
 </LI>
 </UL>
-
 <P>
-
 <H4><A NAME="SECTION04190090000000000000">
 Véase</A>
 </H4>
-  
-
 <P>
-
 <OL>
 <LI><A NAME="tex2html140"
   HREF="https://developer.mozilla.org/en-US/docs/JavaScript/Reference/Global_Objects/JSON/stringify">JSON.stringify</A>
@@ -765,9 +717,7 @@ Véase</A>
   HREF="http://stackoverflow.com/questions/4778881/how-to-use-underscore-js-as-a-template-engine">Stackoverflow::how to use Underscore template</A>
 </LI>
 </OL>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1081"
   HREF="node17.html">
