--- a/node22.html
+++ b/node22.html
@@ -102,16 +102,16 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="section:esquemas"></A>
 <BR>
 Esquemas de Traducción
-</H1>
-<P>
+</H1><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Un <A NAME="4152"></A><SPAN  CLASS="textbf">esquema de traducción</SPAN> es una gramática independiente del contexto
+<I>Un <A NAME="4164"></A><SPAN  CLASS="textbf">esquema de traducción</SPAN> es una gramática independiente del contexto
 en la cual se han insertado fragmentos de código en las partes derechas
 de sus reglas de producción. Los fragmentos de código asi insertados 
-se denominan <A NAME="4154"></A><SPAN  CLASS="textbf">acciones semánticas</SPAN>. Dichos fragmentos actúan, calculan
+se denominan <A NAME="4166"></A><SPAN  CLASS="textbf">acciones semánticas</SPAN>. Dichos fragmentos actúan, calculan
 y modifican los atributos asociados con los nodos del árbol sintáctico. 
 El orden en que se evalúan los fragmentos
 es el de un recorrido primero-profundo del árbol de análisis sintáctico.</I></DIV><P></P>
+<I>
 Obsérvese que, en general, para poder aplicar un esquema de traducción hay 
 que construir el árbol sintáctico y después aplicar las acciones empotradas
 en las reglas en el orden de recorrido primero-profundo. Por supuesto, si 
@@ -119,9 +119,9 @@ la gramática es ambigua una frase podría tener dos árboles y la ejecución de
 acciones para ellos podría dar lugar a diferentes resultados. Si se quiere
 evitar la multiplicidad de resultados (interpretaciones semánticas)
 es necesario precisar de que árbol sintáctico concreto se esta hablando.
-
+</I>
 <P>
-Por ejemplo, si en la regla <!-- MATH
+<I>Por ejemplo, si en la regla <!-- MATH
  $A \rightarrow \alpha \beta$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -129,20 +129,17 @@ Por ejemplo, si en la regla <!-- MATH
  SRC="img59.png"
  ALT="$ A \rightarrow \alpha \beta $"></SPAN>
 insertamos un fragmento de código:
-
+</I>
 <P>
-<DIV ALIGN="CENTER">
-<!-- MATH
+<DIV ALIGN="CENTER"><I><!-- MATH
  $A \rightarrow \alpha \{ action \} \beta$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="132" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img60.png"
- ALT="$ A \rightarrow \alpha \{ action \} \beta $"></SPAN>
-</DIV>
-
+ ALT="$ A \rightarrow \alpha \{ action \} \beta $"></SPAN></I></DIV>
 <P>
-La acción <!-- MATH
+<I>La acción <!-- MATH
  $\{ action \}$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -157,40 +154,44 @@ las acciones asociadas con el recorrido del subárbol <SPAN CLASS="MATH"><IMG
  WIDTH="16" HEIGHT="34" ALIGN="MIDDLE" BORDER="0"
  SRC="img62.png"
  ALT="$ \beta$"></SPAN>.
-
+</I>
 <P>
-El siguiente esquema de traducción recibe como entrada una expresión en infijo
+<I>El siguiente esquema de traducción recibe como entrada una expresión en infijo
 y produce como salida su traducción a postfijo para expresiones aritmeticas con sólo 
 restas de números:
-
+</I>
 <P>
+<I>
 <BR>
 <BR>
-<TABLE CELLPADDING=3>
-<TR><TD ALIGN="LEFT"><!-- MATH
+</I><TABLE CELLPADDING=3>
+<TR><TD ALIGN="LEFT"><I>
+<!-- MATH
  $expr   \rightarrow expr_1  -  NUM$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="179" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img63.png"
- ALT="$ expr \rightarrow expr_1 - NUM$"></SPAN></TD>
-<TD ALIGN="LEFT"><code>{ expr.TRA = expr[1].TRA+" "+NUM.VAL+" - "}</code></TD>
+ ALT="$ expr \rightarrow expr_1 - NUM$"></SPAN> </I></TD>
+<TD ALIGN="LEFT"><I> <code>{ expr.TRA = expr[1].TRA+" "+NUM.VAL+" - "}</code> </I></TD>
 </TR>
-<TR><TD ALIGN="LEFT"><!-- MATH
+<TR><TD ALIGN="LEFT"><I> 
+<!-- MATH
  $expr   \rightarrow NUM$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="116" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img64.png"
- ALT="$ expr \rightarrow NUM$"></SPAN></TD>
-<TD ALIGN="LEFT"><code>{ expr.TRA = NUM.VAL }</code></TD>
+ ALT="$ expr \rightarrow NUM$"></SPAN> </I></TD>
+<TD ALIGN="LEFT"><I> <code>{ expr.TRA = NUM.VAL }</code>
+</I></TD>
 </TR>
-</TABLE>
+</TABLE><I>
 <BR>
 <BR>
-
+</I>
 <P>
-Las apariciones de variables sintácticas en una regla de producción se indexan
+<I>Las apariciones de variables sintácticas en una regla de producción se indexan
 como se ve en el ejemplo, para distinguir de que nodo del árbol de análisis estamos
 hablando. Cuando hablemos del atributo de un nodo utilizaremos el punto (<code>.</code>). 
 Aquí <code>VAL</code> es un atributo de los nodos de tipo <SPAN CLASS="MATH"><IMG
@@ -204,29 +205,24 @@ los nodos de tipo <SPAN CLASS="MATH"><IMG
  WIDTH="40" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img66.png"
  ALT="$ expr$"></SPAN>.
-
-<P>
-<P>
+</I>
+<P><P>
 <DIV><B>Ejercicio  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>Muestre la secuencia de acciones a la
 que da lugar el esquema de traducción anterior 
 para la frase 7 -5 -4.</I></DIV><P></P>
-
 <P>
-En este ejemplo, el cómputo del atributo <code>expr.TRA</code> depende de los atributos
+<I>En este ejemplo, el cómputo del atributo <code>expr.TRA</code> depende de los atributos
 en los nodos hijos, o lo que es lo mismo, depende de los atributos de los símbolos
 en la parte derecha de la regla de producción. Esto ocurre a menudo y motiva la siguiente
 definición:
-
-<P>
-<P>
+</I>
+<P><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">2</SPAN>.<SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
 <I>Un atributo tal que su valor en todo nodo del árbol sintáctico
 puede ser computado en términos de los atributos de los hijos del nodo se dice
-que es un <A NAME="4158"></A><SPAN  CLASS="textbf">atributo sintetizado</SPAN>.</I></DIV><P></P>
-
+que es un <A NAME="4170"></A><SPAN  CLASS="textbf">atributo sintetizado</SPAN>.</I></DIV><P></P>
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1197"
   HREF="node23.html">
