--- a/node38.html
+++ b/node38.html
@@ -117,23 +117,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 
 <H1><A NAME="SECTION044100000000000000000">
 Not Predicate: Comentarios Anidados</A>
-</H1>
+</H1><I>
 The following recursive  <A NAME="tex2html232"
   HREF="http://pegjs.majda.cz/">PEG.js</A>
 
 program  matches Pascal-style nested comment syntax:
-<PRE>
+</I><PRE>
 (* which can (* nest *) like this *)
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION044100010000000000000">
 Pascal_comments.pegjs</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 $ cat pascal_comments.pegjs 
 /* Pascal nested comments */
 
@@ -148,15 +143,10 @@ End   = '*)'
 ANY   =   'z'    /* any character */       { return 'z';  }
         / char:[^z]                        { return char; }
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION044100020000000000000">
 use_pascal_comments.js</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 $ cat use_pascal_comments.js 
 var PEG = require("./pascal_comments.js");
 var r = PEG.parse(
@@ -164,15 +154,10 @@ var r = PEG.parse(
   " pum pum (* another comment *)");
 console.log(r);
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION044100030000000000000">
 Ejecución</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 $ ../bin/pegjs pascal_comments.pegjs 
 $ node use_pascal_comments.js 
 [ 'not bla bla ',
@@ -180,16 +165,11 @@ $ node use_pascal_comments.js
   ' pum pum ',
   ' another comment ' ]
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION044100040000000000000">
 Donde</A>
 </H4>
-  
-
 <P>
-
 <UL>
 <LI><PRE>
 [~/srcPLgrado/pegjs/examples(master)]$ pwd -P
@@ -210,9 +190,7 @@ origin  git@github.com:crguezl/pegjs.git (push)
   HREF="https://github.com/crguezl/pegjs/tree/master/examples">https://github.com/crguezl/pegjs/tree/master/examples</A>
 </LI>
 </UL>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1534"
   HREF="node39.html">
