--- a/node39.html
+++ b/node39.html
@@ -101,9 +101,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION044110000000000000000">
 Un Lenguaje Dependiente del Contexto</A>
 </H1>
-
 <P>
-El lenguaje <!-- MATH
+<I>El lenguaje <!-- MATH
  $\{ a^n b^n c^n / n \in \mathcal{N} \}$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -111,9 +110,8 @@ El lenguaje <!-- MATH
  SRC="img98.png"
  ALT="$ \{ a^n b^n c^n / n \in \mathcal{N} \}$"></SPAN> no puede ser 
 expresado mediante una gramática independiente del contexto.
-
-<P>
-<PRE>
+</I>
+<P><PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat anbncn.pegjs 
 /*
   The following parsing expression grammar describes the classic 
@@ -129,20 +127,18 @@ S = &amp;(A 'c') 'a'+ B !('a'/'b'/'c')
 A = 'a' A? 'b'
 B = 'b' B? 'c'
 </PRE>
-
 <P>
-Este ejemplo puede ser obtenido desde GitHub:
-<PRE>
+<I>Este ejemplo puede ser obtenido desde GitHub:
+</I><PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ git remote -v
 dmajda  https://github.com/dmajda/pegjs.git (fetch)
 dmajda  https://github.com/dmajda/pegjs.git (push)
 origin  git@github.com:crguezl/pegjs.git (fetch)
 origin  git@github.com:crguezl/pegjs.git (push)
 </PRE>
-
 <P>
-Veamos un ejemplo de uso:
-<PRE>
+<I>Veamos un ejemplo de uso:
+</I><PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ cat use_anbncn.js 
 var PEG = require("./anbncn.js");
 var r = PEG.parse("aabbcc");
@@ -156,19 +152,16 @@ catch (e) {
   console.log("Grr...."+e);
 }
 </PRE>
-
 <P>
-Ejecución:
-<PRE>
+<I>Ejecución:
+</I><PRE>
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ ../bin/pegjs anbncn.pegjs 
 
 [~/Dropbox/src/javascript/PLgrado/pegjs/examples(master)]$ node use_anbncn.js 
 [ '', [ 'a', 'a' ], [ 'b', [ 'b', '', 'c' ], 'c' ], '' ]
 Grr....SyntaxError: Expected "c" but end of input found.
 </PRE>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1552"
   HREF="node40.html">
