--- a/node60.html
+++ b/node60.html
@@ -100,8 +100,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 
 <H1><A NAME="SECTION045160000000000000000">
 Definición Dirigida por la Sintáxis</A>
-</H1>
-Una <A NAME="8165"></A><SPAN  CLASS="textbf">definición dirigida por la sintáxis</SPAN> es un pariente cercano
+</H1><I>
+Una <A NAME="8177"></A><SPAN  CLASS="textbf">definición dirigida por la sintáxis</SPAN> es un pariente cercano
 de los esquemas de traducción. En una definición dirigida por la
 sintáxis una gramática <!-- MATH
  $G = (V, \Sigma, P, S)$
@@ -111,7 +111,7 @@ sintáxis una gramática <!-- MATH
  SRC="img212.png"
  ALT="$ G = (V, \Sigma, P, S)$"></SPAN> se aumenta 
 con nuevas características:
-
+</I>
 <UL>
 <LI>A cada símbolo <!-- MATH
  $S \in V \cup \Sigma$
@@ -121,7 +121,7 @@ con nuevas características:
  SRC="img213.png"
  ALT="$ S \in V \cup \Sigma$"></SPAN> de la gramática se le asocian
 cero o mas atributos. Un atributo queda caracterizado por un identificador
-o nombre y un tipo o clase. A este nivel son <A NAME="8167"></A><SPAN  CLASS="textbf">atributos formales</SPAN>,
+o nombre y un tipo o clase. A este nivel son <A NAME="8179"></A><SPAN  CLASS="textbf">atributos formales</SPAN>,
 como los parámetros formales, en el sentido de que su realización 
 se produce cuando el nodo del árbol es creado.
 </LI>
@@ -132,8 +132,8 @@ se produce cuando el nodo del árbol es creado.
  WIDTH="173" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img214.png"
  ALT="$ A \rightarrow X_1 X_2 \ldots X_n \in P$"></SPAN>
-se le asocian un conjunto de <A NAME="8169"></A><SPAN  CLASS="textbf">reglas de evaluación de los atributos</SPAN>
-o <A NAME="8171"></A><SPAN  CLASS="textbf">reglas semánticas</SPAN> que indican que el atributo en la parte
+se le asocian un conjunto de <A NAME="8181"></A><SPAN  CLASS="textbf">reglas de evaluación de los atributos</SPAN>
+o <A NAME="8183"></A><SPAN  CLASS="textbf">reglas semánticas</SPAN> que indican que el atributo en la parte
 izquierda de la regla semántica depende de los atributos que aparecen en la parte
 derecha de la regla. El atributo que aparece en la parte izquierda de la regla semántica
 puede estar asociado con un símbolo en la parte derecha de la regla de producción.
@@ -145,13 +145,13 @@ puede estar asociado con un símbolo en la parte derecha de la regla de producci
  WIDTH="88" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img205.png"
  ALT="$ X \in V \cup \Sigma$"></SPAN>
-se dividen en dos grupos disjuntos: <A NAME="8173"></A><SPAN  CLASS="textbf">atributos sintetizados</SPAN>
-y <A NAME="8175"></A><SPAN  CLASS="textbf">atributos heredados</SPAN>. Un atributo de <SPAN CLASS="MATH"><IMG
+se dividen en dos grupos disjuntos: <A NAME="8185"></A><SPAN  CLASS="textbf">atributos sintetizados</SPAN>
+y <A NAME="8187"></A><SPAN  CLASS="textbf">atributos heredados</SPAN>. Un atributo de <SPAN CLASS="MATH"><IMG
  WIDTH="21" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img206.png"
- ALT="$ X$"></SPAN> es un <A NAME="8177"></A><SPAN  CLASS="textbf">atributo heredado</SPAN> 
+ ALT="$ X$"></SPAN> es un <A NAME="8189"></A><SPAN  CLASS="textbf">atributo heredado</SPAN> 
 si depende de atributos de su padre y hermános en el árbol.
-Un <A NAME="8179"></A><SPAN  CLASS="textbf">atributo sintetizado</SPAN> es aquél tal que el valor del atributo depende
+Un <A NAME="8191"></A><SPAN  CLASS="textbf">atributo sintetizado</SPAN> es aquél tal que el valor del atributo depende
 de los valores de los atributos de los hijos, 
 es decir en tal caso <SPAN CLASS="MATH"><IMG
  WIDTH="21" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
@@ -161,7 +161,7 @@ y los atributos en la parte derecha de la regla semántica deben
 ser atributos de símbolos en la parte derecha de la regla de producción 
 asociada.
 </LI>
-<LI>Los atributos predefinidos se denominán <A NAME="8181"></A><SPAN  CLASS="textbf">atributos intrínsecos</SPAN>.
+<LI>Los atributos predefinidos se denominán <A NAME="8193"></A><SPAN  CLASS="textbf">atributos intrínsecos</SPAN>.
 Ejemplos de atributos intrínsecos son los atributos 
 sintetizados de los terminales, los cuáles se han
 computado durante la fase de análisis léxico. También
@@ -170,9 +170,8 @@ de arranque, los cuales son pasados como parámetros
 al comienzo de la computación.
 </LI>
 </UL>
-
 <P>
-La diferencia principal con un esquema de traducción está en que
+<I>La diferencia principal con un esquema de traducción está en que
 no se especifica el orden de ejecución de las reglas semánticas.
 Se asume que, bien de forma manual o automática, se resolverán
 las dependencias existentes entre los atributos determinadas
@@ -181,13 +180,12 @@ que serán evaluados primero aquellos atributos que no dependen
 de ningún otro, despues los que dependen de estos, etc. siguiendo
 un esquema de ejecución que viene guiado por las dependencias
 existentes entre los datos.
-
+</I>
 <P>
-Aunque hay muchas formas de realizar un evaluador de una definición
+<I>Aunque hay muchas formas de realizar un evaluador de una definición
 dirigida por la sintáxis, conceptualmente, tal evaluador debe:
-
+</I>
 <P>
-
 <OL>
 <LI>Construir el árbol de análisis sintáctico para la gramática
 y la entrada dadas.
@@ -195,28 +193,27 @@ y la entrada dadas.
 <LI>Analizar las reglas semánticas para determinar los atributos,
 su clase y las dependencias entre los mismos.
 </LI>
-<LI>Construir el <A NAME="8183"></A><SPAN  CLASS="textbf">grafo de dependencias</SPAN> de los atributos,
+<LI>Construir el <A NAME="8195"></A><SPAN  CLASS="textbf">grafo de dependencias</SPAN> de los atributos,
 el cual tiene
 un nodo para cada ocurrencia de un atributo en el árbol de análisis
 sintáctico etiquetado con dicho atributo. El grafo tiene una arista entre dos
 nodos si existe una dependencia entre los dos atributos a través de alguna
 regla semántica. 
 </LI>
-<LI>Supuesto que el grafo de dependencias determina un <A NAME="8185"></A><SPAN  CLASS="textbf">orden parcial</SPAN>
+<LI>Supuesto que el grafo de dependencias determina un <A NAME="8197"></A><SPAN  CLASS="textbf">orden parcial</SPAN>
 (esto es cumple las propiedades reflexiva, antisimétrica y transitiva) 
-construir un <A NAME="8187"></A><SPAN  CLASS="textbf">orden topológico</SPAN> compatible con el orden parcial.
+construir un <A NAME="8199"></A><SPAN  CLASS="textbf">orden topológico</SPAN> compatible con el orden parcial.
 </LI>
 <LI>Evaluar las reglas semánticas de acuerdo con el orden topológico.
 </LI>
 </OL>
-
 <P>
-Una definición dirigida por la sintáxis en la que las reglas semánticas
-no tienen efectos laterales se denomina una <A NAME="8189"></A><SPAN  CLASS="textbf">gramática atribuída</SPAN>.
-
+<I>Una definición dirigida por la sintáxis en la que las reglas semánticas
+no tienen efectos laterales se denomina una <A NAME="8201"></A><SPAN  CLASS="textbf">gramática atribuída</SPAN>.
+</I>
 <P>
-Si la definición dirigida por la sintáxis puede ser realizada 
-mediante un esquema de traducción se dice que es <A NAME="8191"></A><SPAN  CLASS="textbf">L-atribuída</SPAN>.
+<I>Si la definición dirigida por la sintáxis puede ser realizada 
+mediante un esquema de traducción se dice que es <A NAME="8203"></A><SPAN  CLASS="textbf">L-atribuída</SPAN>.
 Para que una definición dirigida por la sintáxis sea L-atribuída
 deben cumplirse que cualquiera que sea la regla de producción
 <!-- MATH
@@ -230,7 +227,7 @@ deben cumplirse que cualquiera que sea la regla de producción
  WIDTH="26" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img204.png"
  ALT="$ X_j$"></SPAN> pueden depender únicamente de:
-
+</I>
 <OL>
 <LI>Los atributos de los símbolos a la izquierda de <SPAN CLASS="MATH"><IMG
  WIDTH="26" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
@@ -243,22 +240,20 @@ deben cumplirse que cualquiera que sea la regla de producción
  ALT="$ A$"></SPAN>
 </LI>
 </OL>
-
 <P>
-Nótese que las restricciones se refieren a los atributos heredados.
+<I>Nótese que las restricciones se refieren a los atributos heredados.
 El cálculo de los atributos sintetizados no supone 
 problema para un esquema de traducción. Si la gramática
 es LL(1), resulta fácil realizar una definición 
 L-atribuída en un analizador descendente recursivo predictivo.
-
+</I>
 <P>
-Si la definición dirigida por la sintáxis sólo utiliza 
-atributos sintetizados se denomina <A NAME="8193"></A><SPAN  CLASS="textbf">S-atribuída</SPAN>. Una
+<I>Si la definición dirigida por la sintáxis sólo utiliza 
+atributos sintetizados se denomina <A NAME="8205"></A><SPAN  CLASS="textbf">S-atribuída</SPAN>. Una
 definición S-atribuída puede ser fácilmente trasladada a un programa
 <code>jison</code>.
-
-<P>
-<P>
+</I>
+<P><P>
 <DIV><B>Ejercicio  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">16</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>El siguiente es un ejemplo de definición dirigida por la sintáxis:
 <BR>
@@ -326,9 +321,7 @@ B <!-- MATH
 <P>
 <I>Determine un orden correcto de evaluación de la anterior
 definición dirigida por la sintáxis para la entrada <code>b a b c</code>.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejercicio  <SPAN CLASS="arabic">5</SPAN>.<SPAN CLASS="arabic">16</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
 <I>Lea el artículo 
 <A NAME="tex2html301"
@@ -349,9 +342,7 @@ do not know about this fact. They are running prefabricated subsystems
 constructed by external companies such as ours. These subsystems are
 for example parsers which use attribute grammar technology.
 </I></BLOCKQUOTE></DIV><P></P>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html1952"
   HREF="node61.html">
