--- a/node72.html
+++ b/node72.html
@@ -119,14 +119,14 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="section:eyappatronesarbol"></A>
 <BR>
 Patrones Árbol y Transformaciones Árbol
-</H1>
+</H1><I>
 Una transformación de un programa puede ser descrita
-como un conjunto de <A NAME="9186"></A><SPAN  CLASS="textbf">reglas de transformación</SPAN> 
-o <A NAME="9188"></A><SPAN  CLASS="textbf">esquema de traducción árbol</SPAN>
+como un conjunto de <A NAME="9198"></A><SPAN  CLASS="textbf">reglas de transformación</SPAN> 
+o <A NAME="9200"></A><SPAN  CLASS="textbf">esquema de traducción árbol</SPAN>
 sobre el árbol abstracto que representa el programa.
-
+</I>
 <P>
-En su forma mas sencilla, estas reglas de transformación
+<I>En su forma mas sencilla, estas reglas de transformación
 vienen definidas
 por ternas <!-- MATH
  $(p, e, action)$
@@ -138,7 +138,7 @@ por ternas <!-- MATH
 terna <SPAN CLASS="MATH"><IMG
  WIDTH="14" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img254.png"
- ALT="$ p$"></SPAN> es un <A NAME="9190"></A><SPAN  CLASS="textbf">patrón árbol</SPAN> que dice que árboles
+ ALT="$ p$"></SPAN> es un <A NAME="9202"></A><SPAN  CLASS="textbf">patrón árbol</SPAN> que dice que árboles
 deben ser seleccionados. La segunda componente 
 <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
@@ -158,23 +158,21 @@ del árbol que casa con el patrón <SPAN CLASS="MATH"><IMG
  SRC="img254.png"
  ALT="$ p$"></SPAN>.
 Una forma de representar este esquema sería:
-
+</I>
 <P>
-<DIV ALIGN="CENTER">
-<!-- MATH
+<DIV ALIGN="CENTER"><I><!-- MATH
  $p \Longrightarrow e$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="59" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img323.png"
  ALT="$ p \Longrightarrow e$"></SPAN> <code>{ action }</code>
-
-</DIV>
-
+</I></DIV>
 <P>
-Por ejemplo:
-
+<I>Por ejemplo:
+</I>
 <P>
+<I>
 <BR>
 <BR>
 <!-- MATH
@@ -186,10 +184,10 @@ Por ejemplo:
  ALT="$ PLUS(NUM_1, NUM_2) \Longrightarrow NUM_3$"></SPAN> <code>{ $NUM_3{VAL} = $NUM_1{VAL} + $NUM_2{VAL} }</code>
 <BR>
 <BR>
-
+</I>
 <P>
-cuyo significado es que dondequiera que haya un nódo del AAA que case 
-con el <A NAME="9192"></A><SPAN  CLASS="textbf">patrón de entrada</SPAN> <!-- MATH
+<I>cuyo significado es que dondequiera que haya un nódo del AAA que case 
+con el <A NAME="9204"></A><SPAN  CLASS="textbf">patrón de entrada</SPAN> <!-- MATH
  $PLUS(NUM, NUM)$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -211,17 +209,18 @@ para distinguirlos en la parte semántica. La acción indica
 como deben recomputarse los atributos para el nuevo árbol:
 El atributo <code>VAL</code> del árbol resultante es la suma de los atributos
 <code>VAL</code> de los operandos en el árbol que ha casado.
-La transformación se repite hasta que se produce la <A NAME="9194"></A><SPAN  CLASS="textbf">normalización del árbol</SPAN>.
-
+La transformación se repite hasta que se produce la <A NAME="9206"></A><SPAN  CLASS="textbf">normalización del árbol</SPAN>.
+</I>
 <P>
-Las reglas de ``casamiento''  de árboles pueden ser mas complejas, 
+<I>Las reglas de ``casamiento''  de árboles pueden ser mas complejas, 
 haciendo alusión a propiedades de los atributos, por ejemplo
-
+</I>
 <P>
+<I>
 <BR>
 <BR>
-<DIV ALIGN="CENTER">
-<!-- MATH
+</I>
+<DIV ALIGN="CENTER"><I><!-- MATH
  $ASSIGN(LEFTVALUE, x)\ and$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -233,31 +232,29 @@ haciendo alusión a propiedades de los atributos, por ejemplo
 <SPAN CLASS="MATH"><IMG
  WIDTH="75" HEIGHT="16" ALIGN="BOTTOM" BORDER="0"
  SRC="img327.png"
- ALT="$ \Longrightarrow NIL$"></SPAN>
-</DIV>
+ ALT="$ \Longrightarrow NIL$"></SPAN></I></DIV><I>
 <BR>
 <BR>
-
+</I>
 <P>
-indica que se pueden eliminar aquellos árboles de tipo asignación
+<I>indica que se pueden eliminar aquellos árboles de tipo asignación
 en los cuáles la variable asociada con el nodo <SPAN CLASS="MATH"><IMG
  WIDTH="123" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img288.png"
  ALT="$ LEFTVALUE$"></SPAN>
 no se usa posteriormente. 
-
+</I>
 <P>
-Otros ejemplos con variables <SPAN CLASS="MATH"><IMG
+<I>Otros ejemplos con variables <SPAN CLASS="MATH"><IMG
  WIDTH="23" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img328.png"
  ALT="$ S_1$"></SPAN> y <SPAN CLASS="MATH"><IMG
  WIDTH="23" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img329.png"
  ALT="$ S_2$"></SPAN>:
-
+</I>
 <P>
-<DIV ALIGN="CENTER">
-<!-- MATH
+<DIV ALIGN="CENTER"><I><!-- MATH
  $IFELSE(NUM, S_1, S_2)$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -282,11 +279,9 @@ Otros ejemplos con variables <SPAN CLASS="MATH"><IMG
 <SPAN CLASS="MATH"><IMG
  WIDTH="56" HEIGHT="32" ALIGN="MIDDLE" BORDER="0"
  SRC="img332.png"
- ALT="$ \Longrightarrow S_2$"></SPAN>
-</DIV>
-
+ ALT="$ \Longrightarrow S_2$"></SPAN></I></DIV>
 <P>
-Observe que en el patrón de entrada <!-- MATH
+<I>Observe que en el patrón de entrada <!-- MATH
  $ASSIGN(LEFTVALUE, x)$
  -->
 <SPAN CLASS="MATH"><IMG
@@ -305,20 +300,16 @@ patrón <!-- MATH
  SRC="img333.png"
  ALT="$ ASSIGN(LEFTVALUE, x)$"></SPAN> case con cualquier árbol de asignación,
 independientemente de la forma que tenga su subárbol derecho.
-
+</I>
 <P>
-Las siguientes definiciones formalizan una aproximación simplificada 
-al significado de los conceptos <A NAME="9196"></A><SPAN  CLASS="textbf">patrones árbol</SPAN> y
-<A NAME="9198"></A><SPAN  CLASS="textbf">casamiento de árboles</SPAN>.
-
+<I>Las siguientes definiciones formalizan una aproximación simplificada 
+al significado de los conceptos <A NAME="9208"></A><SPAN  CLASS="textbf">patrones árbol</SPAN> y
+<A NAME="9210"></A><SPAN  CLASS="textbf">casamiento de árboles</SPAN>.
+</I>
 <P>
-
 <H4><A NAME="SECTION04730010000000000000">
 Patrón Árbol</A>
-</H4>
-  
-
-<P>
+</H4><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>Sea <!-- MATH
  $(\Sigma, \rho)$
@@ -355,25 +346,18 @@ aridad cero:
  WIDTH="78" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img336.png"
  ALT="$ B(V \cup \Sigma)$"></SPAN>
-se denomina <A NAME="9204"></A><SPAN  CLASS="textbf">patrón</SPAN> sobre <SPAN CLASS="MATH"><IMG
+se denomina <A NAME="9216"></A><SPAN  CLASS="textbf">patrón</SPAN> sobre <SPAN CLASS="MATH"><IMG
  WIDTH="17" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img8.png"
  ALT="$ \Sigma$"></SPAN>.</I></DIV><P></P>
-
 <P>
-
 <H4><A NAME="SECTION04730020000000000000">
 Patrón Lineal</A>
-</H4>
-  
-
-<P>
+</H4><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
 <I>Se dice que un
-patrón es un <A NAME="9210"></A><SPAN  CLASS="textbf">patrón lineal</SPAN> si ninguna variable se repite.</I></DIV><P></P>
-
-<P>
-<P>
+patrón es un <A NAME="9222"></A><SPAN  CLASS="textbf">patrón lineal</SPAN> si ninguna variable se repite.</I></DIV><P></P>
+<P><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">3</SPAN></B> &nbsp; 
 <I>Se dice que un patrón es de tipo <!-- MATH
  $(x_1, \ldots x_k)$
@@ -390,9 +374,7 @@ son <!-- MATH
  WIDTH="71" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img338.png"
  ALT="$ x_1, \ldots x_k$"></SPAN>.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejemplo  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>Sea <!-- MATH
  $\Sigma = \{A, CONS, NIL \}$
@@ -451,11 +433,9 @@ subárboles <SPAN CLASS="MATH"><IMG
  SRC="img305.png"
  ALT="$ t/2\ldotp1$"></SPAN> situados en las posiciones de las variables
 <A NAME="tex2html317"
-  HREF="footnode.html#foot9072"><SUP><SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A></I>
+  HREF="footnode.html#foot9084"><SUP><SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A></I>
 <P></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejercicio  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
 <I>Dado la gramática árbol:
 </I>
@@ -515,9 +495,7 @@ subárboles <SPAN CLASS="MATH"><IMG
  WIDTH="92" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img349.png"
  ALT="$ S_1(X, Y, Y)$"></SPAN> un patrón árbol?</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejemplo  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
 <I>Ejemplos de patrones para el AAA definido en el ejemplo
 <A HREF="node69.html#example:tutuast"><IMG  ALIGN="BOTTOM" BORDER="1" ALT="[*]" SRC="crossref.png"></A> para el lenguaje Tutu son:
@@ -548,17 +526,12 @@ subárboles <SPAN CLASS="MATH"><IMG
  WIDTH="45" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img353.png"
  ALT="$ (x, y)$"></SPAN>.</I></DIV><P></P>
-
 <P>
-
 <H4><A NAME="SECTION04730030000000000000">
 Sustitución</A>
-</H4>
-  
-
-<P>
+</H4><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">4</SPAN></B> &nbsp; 
-<I>Una <A NAME="9216"></A><SPAN  CLASS="textbf">sustitución árbol</SPAN> es una aplicación <SPAN CLASS="MATH"><IMG
+<I>Una <A NAME="9228"></A><SPAN  CLASS="textbf">sustitución árbol</SPAN> es una aplicación <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img354.png"
  ALT="$ \theta$"></SPAN> que asigna variables
@@ -632,9 +605,7 @@ que aparecen en <SPAN CLASS="MATH"><IMG
  WIDTH="71" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img338.png"
  ALT="$ x_1, \ldots x_k$"></SPAN>.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejemplo  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">3</SPAN></B> &nbsp; 
 <I>Si aplicamos la sustitución  <!-- MATH
  $\theta = \{x/A, y/CONS(A, NIL)\}$
@@ -667,9 +638,7 @@ En efecto:
  SRC="img362.png"
  ALT="$ CONS(x, y)\theta = CONS(x\theta, y\theta) = CONS(A, CONS(A, NIL))$"></SPAN></I></DIV>
 <P></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejemplo  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">4</SPAN></B> &nbsp; 
 <I>Si aplicamos la sustitución  <!-- MATH
  $\theta = \{x/PLUS(NUM, x), y/TIMES(ID, NUM)\}$
@@ -701,15 +670,10 @@ al patrón <!-- MATH
  SRC="img366.png"
  ALT="$ PLUS(x, y)\theta = PLUS(x\theta, y\theta) = PLUS(PLUS(NUM,x), TIMES(ID, NUM))$"></SPAN></I></DIV>
 <P></DIV><P></P>
-
 <P>
-
 <H4><A NAME="SECTION04730040000000000000">
 Casamiento Árbol</A>
-</H4>
-  
-
-<P>
+</H4><P>
 <DIV><B>Definición  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">5</SPAN></B> &nbsp; 
 <I>Se dice que un patrón <!-- MATH
  $\tau \in B(V \cup \Sigma)$
@@ -724,7 +688,7 @@ Casamiento Árbol</A>
 <SPAN CLASS="MATH"><IMG
  WIDTH="71" HEIGHT="31" ALIGN="MIDDLE" BORDER="0"
  SRC="img338.png"
- ALT="$ x_1, \ldots x_k$"></SPAN> <A NAME="9222"></A><SPAN  CLASS="textbf">casa con un árbol</SPAN>
+ ALT="$ x_1, \ldots x_k$"></SPAN> <A NAME="9234"></A><SPAN  CLASS="textbf">casa con un árbol</SPAN>
 <!-- MATH
  $t \in B(\Sigma)$
  -->
@@ -755,7 +719,7 @@ es, si existen <!-- MATH
 También se dice que <SPAN CLASS="MATH"><IMG
  WIDTH="14" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img368.png"
- ALT="$ \tau$"></SPAN> <A NAME="9224"></A><SPAN  CLASS="textbf">casa con la sustitución</SPAN>
+ ALT="$ \tau$"></SPAN> <A NAME="9236"></A><SPAN  CLASS="textbf">casa con la sustitución</SPAN>
 <!-- MATH
  $\{x_1/t_1, \ldots x_k/t_k\}$
  -->
@@ -763,9 +727,7 @@ También se dice que <SPAN CLASS="MATH"><IMG
  WIDTH="135" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img371.png"
  ALT="$ \{x_1/t_1, \ldots x_k/t_k\}$"></SPAN>.</I></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejemplo  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">5</SPAN></B> &nbsp; 
 <I>El patrón <!-- MATH
  $\tau = CONS(x, NIL)$
@@ -817,9 +779,7 @@ y con el subárbol  <!-- MATH
  SRC="img378.png"
  ALT="$ t \ldotp 1 = \tau \{x/A\}$"></SPAN></I></DIV>
 <P></DIV><P></P>
-
-<P>
-<P>
+<P><P>
 <DIV><B>Ejercicio  <SPAN CLASS="arabic">7</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">2</SPAN></B> &nbsp; 
 <I>Sea <!-- MATH
  $\tau = PLUS(x, y)$
@@ -885,21 +845,19 @@ PLUS(x, y)\{x/t_1, y/t_2\}$"></SPAN>
  WIDTH="56" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img289.png"
  ALT="$ PLUS$"></SPAN>.</I></DIV><P></P>
-
 <P>
-El problema aquí es equivalente al de las expresiones regulares
+<I>El problema aquí es equivalente al de las expresiones regulares
 en el caso de los lenguajes lineales. En aquellos, los autómatas finitos 
 nos proveen con un mecanismo para reconocer si una determinada cadena
 ``casa''' o no con la expresión regular. Existe un concepto análogo,
-el de <A NAME="9226"></A><SPAN  CLASS="textbf">autómata árbol</SPAN> que resuelve el problema del ``casamiento''
+el de <A NAME="9238"></A><SPAN  CLASS="textbf">autómata árbol</SPAN> que resuelve el problema del ``casamiento''
 de patrones árbol. Al igual que el concepto de autómata permite 
 la construcción de software para la búsqueda de cadenas y su 
 posterior modificación, el concepto de autómata árbol 
 permite la construcción de software para la búsqueda de los
 subárboles que casan con un patrón árbol dado.
-
+</I>
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2173"
   HREF="node73.html">
