--- a/node73.html
+++ b/node73.html
@@ -124,28 +124,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <H1><A NAME="SECTION04740000000000000000">
 Ejemplo de Transformaciones Árbol: Parse::Eyapp::TreeRegexp</A>
 </H1>
-
 <P>
-
 <H4><A NAME="SECTION04740010000000000000">
 Instalación</A>
 </H4>
-  
-
-<P>
-<PRE>
+<P><PRE>
 [~/jison/jison-aSb(master)]$ sudo cpan Parse::Eyapp
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04740020000000000000">
 Donde</A>
 </H4>
-  
-
 <P>
-
 <UL>
 <LI><PRE>
 [~/src/perl/parse-eyapp/examples/MatchingTrees]$ pwd -P
@@ -166,16 +156,11 @@ Donde</A>
 (Véase el método <code>s</code>)
 </LI>
 </UL>
-
 <P>
-
 <H4><A NAME="SECTION04740030000000000000">
 La gramática: Expresiones</A>
 </H4>
-  
-
-<P>
-<PRE>
+<P><PRE>
 my $grammar = q{
   %lexer {
       m{\G\s+}gc;
@@ -222,22 +207,17 @@ my $grammar = q{
   %%
 }; # end grammar
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04740040000000000000">
 Ejecución</A>
-</H4>
-  
-
-<PRE>
+</H4><PRE>
 El trozo de código:
 \begin{verbatim}
 $parser-&gt;input(\"2*-3+b*0;--2\n");       # Set the input
 my $t = $parser-&gt;YYParse;
-</PRE>
+</PRE><I>
 da lugar a este árbol:
-<PRE>
+</I><PRE>
 [~/src/perl/parse-eyapp/examples/MatchingTrees]$ ./synopsis.pl 
 Syntax Tree:
 EXPRESSION_LIST(
@@ -252,9 +232,9 @@ EXPRESSION_LIST(
     UMINUS( NUM( TERMINAL[2])) # UMINUS
   ) # UMINUS
 ) # EXPRESSION_LIST
-</PRE>
+</PRE><I>
 Al aplicar las transformaciones:
-<PRE>
+</I><PRE>
 # Let us transform the tree. Define the tree-regular expressions ..
 my $p = Parse::Eyapp::Treeregexp-&gt;new( STRING =&gt; q{
     { #  Example of support code
@@ -276,22 +256,17 @@ $p-&gt;generate(); # Create the tranformations
 
 $t-&gt;s($uminus); # Transform UMINUS nodes
 $t-&gt;s(@all);    # constant folding and mult. by zero
-</PRE>
+</PRE><I>
 Obtenemos el árbol:
-<PRE>
+</I><PRE>
 Syntax Tree after transformations:
 EXPRESSION_LIST(NUM(TERMINAL[-6]),NUM(TERMINAL[2]))
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04740050000000000000">
 synopsis.pl</A>
 </H4>
-  
-
-<P>
-<PRE>
+<P><PRE>
 [~/src/perl/parse-eyapp/examples/MatchingTrees]$ cat synopsis.pl 
 #!/usr/bin/perl -w
 use strict;
@@ -385,19 +360,15 @@ $t-&gt;s(@all);    # constant folding and mult. by zero
 local $Parse::Eyapp::Node::INDENT=0;
 print "\nSyntax Tree after transformations:\n",$t-&gt;str,"\n";
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04740060000000000000">
 El método <TT>s</TT></A>
 </H4>
-  
-
 <P>
-El código de <code>s</code> está en 
+<I>El código de <code>s</code> está en 
 <A NAME="tex2html322"
   HREF="https://github.com/gitpan/Parse-Eyapp/blob/master/lib/Parse/Eyapp/Node.pm">lib/Parse/Eyapp/Node.pm</A>:
-<PRE>
+</I><PRE>
 sub s {
   my @patterns = @_[1..$#_];
 
@@ -422,14 +393,10 @@ sub s {
   } while ($changes);
 }
 </PRE>
-
 <P>
-
 <H4><A NAME="SECTION04740070000000000000">
 Véase</A>
 </H4>
-  
-
 <UL>
 <LI><A NAME="tex2html323"
   HREF="http://search.cpan.org/~casiano/Parse-Eyapp-1.182/lib/Parse/Eyapp/eyapp">Parse::Eyapp</A>
@@ -445,9 +412,7 @@ Véase</A>
 (Véase el método <code>s</code>)
 </LI>
 </UL>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2191"
   HREF="node74.html">
