--- a/node75.html
+++ b/node75.html
@@ -98,22 +98,23 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--End of Navigation Panel-->
 
 <H1><A NAME="SECTION04760000000000000000"></A>
-   <A NAME="9274"></A>
+   <A NAME="9286"></A>
   
 <A NAME="practica:treetransofrmationsPL0"></A>
 <BR>
 Práctica: Transformaciones en Los Árboles del Analizador PL0
-</H1>
+</H1><I>
 Partimos del código realizado en la práctica 
 <I>Análisis de Ámbito en PL0</I>
 <A HREF="node51.html#practica:analisisdeambitopl0">5.7</A>.
-
+</I>
 <P>
-Modifique el árbol generado por el código de esa práctica
-usando las transformaciones de <A NAME="9275"></A><SPAN  CLASS="textbf">constant folding</SPAN> o
-<A NAME="9277"></A><SPAN  CLASS="textbf">plegado de las constantes</SPAN>:
-
+<I>Modifique el árbol generado por el código de esa práctica
+usando las transformaciones de <A NAME="9287"></A><SPAN  CLASS="textbf">constant folding</SPAN> o
+<A NAME="9289"></A><SPAN  CLASS="textbf">plegado de las constantes</SPAN>:
+</I>
 <P>
+<I>
 <BR>
 <BR>
 <!-- MATH
@@ -150,12 +151,12 @@ usando las transformaciones de <A NAME="9275"></A><SPAN  CLASS="textbf">constant
  WIDTH="264" HEIGHT="36" ALIGN="MIDDLE" BORDER="0"
  SRC="img385.png"
  ALT="$ DIV(NUM_1, NUM_2) \Longrightarrow NUM_3$"></SPAN> <code>{ $NUM_3{VAL} = $NUM_1{VAL} / $NUM_2{VAL} }</code>
-
+</I>
 <P>
-etc.
-
+<I>etc.
+</I>
 <P>
-Opcionalmente si lo desea puede considerar otras transformaciones: 
+<I>Opcionalmente si lo desea puede considerar otras transformaciones: 
 <BR>
 <BR>
 <!-- MATH
@@ -179,9 +180,8 @@ Opcionalmente si lo desea puede considerar otras transformaciones:
  ALT="$ \Longrightarrow SHIFTLEFT(X; NUM_3)$"></SPAN> <code>{ $NUM_3{VAL} = s }</code>
 <BR>
 <BR>
-
+</I>
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html2228"
   HREF="node76.html">
