--- a/node9.html
+++ b/node9.html
@@ -152,7 +152,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04120000000000000000"></A>
-   <A NAME="2716"></A>
+   <A NAME="2720"></A>
   
 <A NAME="sectionpractica:conversordetemperaturas"></A>
 <BR>
@@ -347,7 +347,7 @@ The <code>onchange</code> event occurs when the value of an element has been cha
  &lt;link href="global.css" rel="stylesheet" type="text/css"&gt;
 </PRE>
 </LI>
-<LI><A NAME="2721"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2723"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
+<LI><A NAME="2725"></A><SPAN  CLASS="textit">CSS</SPAN> stands for <A NAME="2727"></A><SPAN  CLASS="textit">Cascading Style Sheets</SPAN> and is a separate, but complementary, language to HTML. CSS is what we use to apply styles to the content on our web page.
 </LI>
 </UL>
 
@@ -398,25 +398,25 @@ Sintáxis CSS</A>
 <PRE>
 th, td      { vertical-align: top; text-align: right; font-size:large; }     /* Don't center table cells  */
 </PRE>
-What you see above is referred to as a <A NAME="2733"></A><SPAN  CLASS="textit">rule set</SPAN>. 
+What you see above is referred to as a <A NAME="2737"></A><SPAN  CLASS="textit">rule set</SPAN>. 
 
 <P>
 
 <UL>
 <LI>Notice the curly braces. Also, notice that each declaration inside the curly braces has a semicolon. Everything
-inside the curly braces is called a <A NAME="2735"></A><SPAN  CLASS="textit">declaration block</SPAN>.
+inside the curly braces is called a <A NAME="2739"></A><SPAN  CLASS="textit">declaration block</SPAN>.
 </LI>
-<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2737"></A><SPAN  CLASS="textit">selector</SPAN>.
+<LI>The portion prior to the first curly brace is what defines which part of the web page we are styling. This is referred to as the <A NAME="2741"></A><SPAN  CLASS="textit">selector</SPAN>.
 
 <P>
 Here we're using commas to separate our selectors <code>th</code> and <code>td</code>. 
 This is a useful method to use to combine multiple selectors in a single rule set. 
 In this case, the styles will apply to all <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> elements,
 </LI>
-<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2739"></A><SPAN  CLASS="textit">declaration</SPAN>. 
+<LI>Each of the three declarations in the declaration block is referred to as a <A NAME="2743"></A><SPAN  CLASS="textit">declaration</SPAN>. 
 </LI>
-<LI>Additionally, each declaration consists of a <A NAME="2741"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
-and a <A NAME="2743"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
+<LI>Additionally, each declaration consists of a <A NAME="2745"></A><SPAN  CLASS="textit">property</SPAN> (the part before the colon)
+and a <A NAME="2747"></A><SPAN  CLASS="textit">value</SPAN> (the part after the colon). 
 </LI>
 <LI>Each CSS declaration ends with a semicolon.
 </LI>
@@ -540,7 +540,7 @@ a:hover {
    color: red;
 }
 </PRE>
-¿Que porción del selector es conocido como <A NAME="2749"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
+¿Que porción del selector es conocido como <A NAME="2753"></A><SPAN  CLASS="textbf">pseudo-clase</SPAN>?
 ¿Cuando se aplica la regla a un ancla <code>&lt;a&gt;</code>?
 </LI>
 <LI>Exprese con palabras a que elementos del documento se aplicará la siguiente regla:
@@ -598,7 +598,7 @@ For example, if you use an un-ordered list (the <code>&lt;ul&gt;</code> element)
 formatting styles, including bullets next to the individual list items (the <code>&lt;li&gt;</code> elements inside the <code>&lt;ul&gt;</code>). 
 
 <P>
-By using a <A NAME="2755"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
+By using a <A NAME="2759"></A><SPAN  CLASS="textbf">CSS reset document</SPAN> at the top of your CSS file, you can reset all these styles
 to a bare minimum. 
 
 <P>
@@ -623,7 +623,7 @@ El Modelo de Caja</A>
   
 
 <P>
-The <A NAME="2761"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
+The <A NAME="2765"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usually invisible rectangular area that is created for each HTML element. This area has four basic components
 
 <P>
 
@@ -632,7 +632,7 @@ The <A NAME="2761"></A><SPAN  CLASS="textbf">box model</SPAN> refers to the usua
 <P>
 
 <UL>
-<LI><A NAME="2763"></A><SPAN  CLASS="textbf">Content</SPAN> 
+<LI><A NAME="2767"></A><SPAN  CLASS="textbf">Content</SPAN> 
 
 <P>
 The content portion of the box model holds the actual content. 
@@ -643,7 +643,7 @@ whatever else is visible on a web page.
 
 <P>
 </LI>
-<LI><A NAME="2765"></A><SPAN  CLASS="textbf">Padding</SPAN>
+<LI><A NAME="2769"></A><SPAN  CLASS="textbf">Padding</SPAN>
 
 <P>
 The <code>padding</code> of an element is defined using the <code>padding</code> property. The <code>padding</code> is the space around the content. 
@@ -655,7 +655,7 @@ for all four sides in one declaration
 <code>padding: 20px 10px 30px 20px</code>, for instance. 
 
 <P>
-When declaring all four sides, you’re using a <A NAME="2767"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
+When declaring all four sides, you’re using a <A NAME="2771"></A><SPAN  CLASS="textbf">shorthand property</SPAN>. 
 
 <P>
 Often when a CSS property takes multiple values like this, 
@@ -667,7 +667,7 @@ top, <code>10px</code> to the right, <code>30px</code> to the bottom, and <code>
 See <A NAME="tex2html30"
   HREF="http://www.w3schools.com/css/css_padding.asp">padding examples at w3schools</A>.
 </LI>
-<LI><A NAME="2771"></A><SPAN  CLASS="textbf">Border</SPAN> 
+<LI><A NAME="2775"></A><SPAN  CLASS="textbf">Border</SPAN> 
 
 <P>
 The border of an element is defined using the border property. 
@@ -681,7 +681,7 @@ border: 4px dashed orange.
 
 <P>
 </LI>
-<LI><A NAME="2775"></A><SPAN  CLASS="textbf">Margin</SPAN> 
+<LI><A NAME="2779"></A><SPAN  CLASS="textbf">Margin</SPAN> 
 
 <P>
 Margins are similar to padding, and are defined using similar syntax 
@@ -784,7 +784,7 @@ Block versus Inline</A>
   
 
 <P>
-HTML elements fall under two categories: <A NAME="2787"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2789"></A><SPAN  CLASS="textbf">inline</SPAN>.
+HTML elements fall under two categories: <A NAME="2791"></A><SPAN  CLASS="textbf">block</SPAN> or <A NAME="2793"></A><SPAN  CLASS="textbf">inline</SPAN>.
 
 <P>
 
@@ -1251,7 +1251,7 @@ Chai Assert Style</A>
   
 
 <P>
-The <A NAME="2830"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
+The <A NAME="2834"></A><SPAN  CLASS="textbf">assert style</SPAN> is exposed through assert interface. 
 
 <P>
 This provides the classic assert-dot notation, similiar to that packaged with node.js. 
@@ -1301,23 +1301,24 @@ $ open tests/index.html
 </PRE>
 
 <P>
-
+Esta información aparece también en las secciones <I>Unit Testing: Mocha
+<A HREF="node85.html#subsection:mocha">11.4.1</A> de
+estos apuntes.
+</I>
+<P>
 <H4><A NAME="SECTION041200200000000000000">
 Manejando tareas en JS: Gulp</A>
 </H4>
-  
-
 <P>
-Why would you want to use a <A NAME="2844"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
-
+<I>Why would you want to use a <A NAME="2848"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
+</I>
 <P>
-They’re small applications that automate often time consuming and boring tasks. 
-
+<I>They’re small applications that automate often time consuming and boring tasks. 
+</I>
 <P>
-If you ever need to do any of the following then a task runner is for you:
-
+<I>If you ever need to do any of the following then a task runner is for you:
+</I>
 <P>
-
 <UL>
 <LI>Minification and concatenation of JavaScript and CSS files
 </LI>
@@ -1325,14 +1326,13 @@ If you ever need to do any of the following then a task runner is for you:
 </LI>
 <LI>Testing 
 </LI>
-</UL>
+</UL><I>
 By creating a task file you can instruct the task manager to take care of many development tasks and watch for changes in relevant files. All you’ll need to do is start up the task runner and get to work on the more interesting parts of your project.
-
+</I>
 <P>
-We are going to use <code>gulp</code> as our task manager. To install it you can:
-
+<I>We are going to use <code>gulp</code> as our task manager. To install it you can:
+</I>
 <P>
-
 <UL>
 <LI>Install gulp globally:
 
@@ -1357,10 +1357,9 @@ it will add a line to <code>package.json</code> as the following:
 </PRE>
 </LI>
 </UL>
-
 <P>
-Now we can write our <code>gulpfile</code>:
-<PRE>
+<I>Now we can write our <code>gulpfile</code>:
+</I><PRE>
 [/tmp/pl-grado-temperature-converter(karma)]$ cat gulpfile.js 
 var gulp    = require('gulp'),
     gutil   = require('gulp-util'),
@@ -1388,9 +1387,7 @@ gulp.task('clean', function(cb) {
   del(['minified/*'], cb);
 });
 </PRE>
-
 <P>
-
 <UL>
 <LI><A NAME="tex2html45"
   HREF="https://github.com/gulpjs/gulp/blob/master/docs/API.md">See gulp API docs</A>
@@ -1407,62 +1404,58 @@ method and passes it to the specific plugin being referenced.
 <LI><code>gulp.watch(glob, fn)</code> – runs a function when a file that matches the glob changes
 </LI>
 </UL>
-
 <P>
-Gulp on its own doesn’t do a lot. We need to install plugins and add tasks to the gulpfile to put Gulp into action. To concatenate files we’ll need the gulp-concat plugin; to install it run this from the command line:-
-
-<P>
-<PRE>
+<I>Gulp on its own doesn’t do a lot. We need to install plugins and add tasks to the gulpfile to put Gulp into action. To concatenate files we’ll need the gulp-concat plugin; to install it run this from the command line:-
+</I>
+<P><PRE>
 npm install gulp-concat --save-dev
-</PRE>
+</PRE><I>
 the four Gulp methods that we will be using:-
 Again, if you check your <code>package.json</code> 
 file you should see a new line referencing the newly installed plugin:-
-
-<P>
-<PRE>
+</I>
+<P><PRE>
 "gulp-concat": "~2.1.7"
 </PRE>
-
 <P>
-Después de instalar todas las dependencias:
-<PRE>
+<I>Después de instalar todas las dependencias:
+</I><PRE>
 $ npm i gulp-util --save-dev
 $ npm i gulp-...  --save-dev
-</PRE>
+</PRE><I>
 podemos ejecutar las tareas:
-<PRE>
+</I><PRE>
 $ gulp minify
 [22:07:58] Using gulpfile ~/local/src/javascript/PLgrado/temperature/gulpfile.js
 [22:07:58] Starting 'minify'...
-</PRE>
+</PRE><I>
 Que produce el directorio <code>minified</code>:
-<PRE>
+</I><PRE>
 $ ls -l minified/
 total 32
 -rw-r--r--  1 casiano  staff   510  5 feb 21:56 global.css
 -rw-r--r--  1 casiano  staff   594  5 feb 21:56 index.html
 -rw-r--r--  1 casiano  staff  2021  5 feb 21:56 normalize.css
 -rw-r--r--  1 casiano  staff   334  5 feb 21:56 temperature.js
-</PRE>
+</PRE><I>
 que como vemos ha compactado los ficheros:
-<PRE>
+</I><PRE>
 $ ls -l temperature.js normalize.css index.html global.css 
 -rw-r--r--  1 casiano  staff   934  4 feb 09:11 global.css
 -rw-r--r--  1 casiano  staff   749  3 feb 10:40 index.html
 -rw-r--r--  1 casiano  staff  7798 30 ene 22:00 normalize.css
 -rw-r--r--  1 casiano  staff   638  3 feb 15:21 temperature.js
-</PRE>
+</PRE><I>
 Podemos ver la lista de tareas mediante la opción <code>-T</code>:
-<PRE>
+</I><PRE>
 $ gulp -T
 [22:00:40] Using gulpfile ~/local/src/javascript/PLgrado/temperature/gulpfile.js
 [22:00:40] Tasks for ~/local/src/javascript/PLgrado/temperature/gulpfile.js
 [22:00:40] |-- minify
 [22:00:40] `-- clean
-</PRE>
+</PRE><I>
 Podemos borrar las ficheros generados con <code>gulp clean</code>:
-<PRE>
+</I><PRE>
 $ gulp clean
 [22:00:46] Using gulpfile ~/local/src/javascript/PLgrado/temperature/gulpfile.js
 [22:00:46] Starting 'clean'...
@@ -1470,12 +1463,10 @@ $ gulp clean
 $ ls -l minified/
 $
 </PRE>
-
 <P>
-gulp has very few flags to know about. All other flags are for tasks to use if needed.
-
+<I>gulp has very few flags to know about. All other flags are for tasks to use if needed.
+</I>
 <P>
-
 <UL>
 <LI><code>-v</code> or <code>--version</code> will display the global and local gulp versions
 </LI>
@@ -1496,30 +1487,27 @@ gulp has very few flags to know about. All other flags are for tasks to use if n
 <LI><code>--silent</code> will disable all gulp logging
 </LI>
 </UL>
-
 <P>
-Tasks can be executed by running <code>gulp &lt;task&gt; &lt;othertask&gt;</code>. Just running <code>gulp</code> will execute the task you registered called <code>default</code>. If there is no <code>default</code> task gulp will error.
-
+<I>Tasks can be executed by running <code>gulp &lt;task&gt; &lt;othertask&gt;</code>. Just running <code>gulp</code> will execute the task you registered called <code>default</code>. If there is no <code>default</code> task gulp will error.
+</I>
 <P>
-See 
+<I>See 
 <A NAME="tex2html46"
   HREF="https://github.com/gulpjs/gulp/blob/master/docs/CLI.md">CLI.md</A>
 at <code>gulpjs/gulp</code>.
-
+</I>
 <P>
-
 <H4><A NAME="SECTION041200210000000000000">
 Karma</A>
 </H4>
-  
-
 <P>
-
+<I>Veáse la sección
+<I>Karma</I> <A HREF="node85.html#subsection:karma">11.4.2</A>.
+</I>
+<P>
 <H4><A NAME="SECTION041200220000000000000">
 Pruebas: Véase</A>
 </H4>
-  
-
 <UL>
 <LI><A NAME="tex2html47"
   HREF="https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/">Testing your frontend JavaScript code using mocha, chai, and sinon</A>
@@ -1544,9 +1532,7 @@ Screencast.
   HREF="http://youtu.be/MVw8N3hTfCI">Vojta Jina: Testacular (now Karma) - JavaScript test runner</A>. YouTube.
 </LI>
 </UL>
-
 <P>
-
 <DIV CLASS="navigation"><HR>
 <A NAME="tex2html936"
   HREF="node10.html">
